--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/2-Pub/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/2-Pub/Data/Contents.plist
@@ -13,9 +13,10 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
 					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
 					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
 					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
 					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
@@ -42,6 +43,7 @@
 					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
 					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>C3045290-9DD8-4285-B611-D18187DC7F54.png</string>
 					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
@@ -52,10 +54,10 @@
 					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
 					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
 					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
-					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
+					<string>DCBB782F-34F6-4B68-9D92-6FCEDA3FBE69.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #134136F6A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
@@ -104,9 +106,9 @@
 				DVwNXQ1eDV8NYA1hDWINYw1kDWUNZg1nDWgNaQ1qDWsN
 				bA1tDW4Nbw1wDXENcg1zDXQNdQ12DXcNeA15DXoNew18
 				DX0Nfg1/DYANgQ2CDYMNhA2UDZUNlg2XDZgNmQ2aDZsN
-				nA2dDZ4Nnw2iDaMNqg2yDbMNtA25DboNuw3EDccNzA3V
-				DdgN2w3cDd0N3g3fDeAN4Q3iDekN6g3zDfYN9w3+DgYO
-				CQ4KDgsOEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
+				nA2dDZ4Nnw2iDacNqA2pDaoNsQ25DboNuw3ADcENwg3L
+				Dc4N0w3cDd8N4g3jDeQN5Q3mDecN6A3pDfAN8Q36Df0N
+				/g4FDg0OEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
 				Dn0OhA6LDpIOmQ6dDqAOoQ7ZDtwO3Q7eDuMO5g7tDvMO
 				9g79DwQPCw8SDxYPGQ8aD1IPVQ9WD1cPXA9fD2YPbA9v
 				D3YPfQ+ED4sPjw+SD5MPwg/FD8YPxw/MD88P1g/cD98P
@@ -1288,60 +1290,60 @@
 				ioECi4ECjIECjYECjoECj4ECkIECkYEBfIECkoECk4EC
 				lIEClYECloECl4ECmIECmYECmoECm4ECnIECnYECnoEC
 				n4ECoIECoYECooECo4ECpIECpYECpoECp4ECqIECqa8Q
-				Ng0bDRwAOQ0eDR8AOQ0hDSIAOwA7AskAUg0nApwAOw0q
+				Ng0bDRwAOQ0eDR8NIA0hDSIAOwA7AskAUg0nApwAOw0q
 				ADkAOQK4DS4NLwFADTEAOw0zDTQNNQ02DTcNOA05ADkN
 				OwA7DT0NPgA5ADkAOQ1CDUMNRAA7ADkAOQ1IDUkAOwA5
-				AFoAOQ1ODU8AO4ECqoECq4AGgQKsgQK4gAaBArmBArqA
-				BYAFgPKAC4ECvIC3gAWBAr2ABoAGgNOBAr6BAsCAL4EC
-				wYAFgQLEgQLHgQLIgQLJgQLKgQLLgQLMgAaBAs2ABYEC
-				zoEC0IAGgAaABoEC0oEC04EC1YAFgAaABoEC1oEC14AF
-				gAaACYAGgQLYgQLbgAWAGVhtZW51Rm9udFtmaXhlZFNo
-				YWRvd1poYWxmSGVpZ2h0W3pvbmVEaXZpZGVyWWxvZ29M
-				YXJnZVpzaG93UGFyZW50WHNob3dMb2dvWHRpdGxlVGFn
-				VHpvbmVYcG9zaXRpb25cbWF0Y2hQYWRkaW5nVXRpdGxl
-				WnNob3dTbG9nYW5XZGl2aWRlclRzaG93V3BhZGRpbmda
-				c2hhZG93Qmx1clpob3ZlckNvbG9yV2lzSG92ZXJZYmFz
-				ZUNvbG9yXxAPbW9iaWxlQmFja0xhYmVsW21vYmlsZUxh
-				YmVsWXRpdGxlQXJlYVl6b25lQWxpZ25dc2hhZG93T3Bh
-				Y2l0eVpzdGlja3lMb2dvWXRpdGxlRm9udFlzaG93VGl0
-				bGVWaGVpZ2h0W2FjdGl2ZUNvbG9yW3N0eWxlQWN0aXZl
-				XmhpZGVMb2dvTW9iaWxlWnN0aWNreUhpZGVfEBBicmVh
-				a3BvaW50Q3VzdG9tWmxvZ29NZWRpdW1ZdGV4dENvbG9y
-				XWZ1bGxXaWR0aE1lbnVXY29udGFpblxjdXN0b21TaXpp
-				bmdaYnJlYWtwb2ludFZzbG9nYW5fEBBoaWRlU2xvZ2Fu
-				TW9iaWxlXxAPY29sbGFwc2VIZWFkaW5nW2ZpeGVkT2Zm
-				c2V0XxAQc3VibWVudUluZGljYXRvclhmb250U2l6ZVls
+				ADkAWgA5DU8AO4ECqoECq4AGgQKsgQK4gQK5gQK8gQK9
+				gAWABYDygAuBAr+At4AFgQLAgAaABoDTgQLBgQLDgC+B
+				AsSABYECx4ECyoECy4ECzIECzYECzoECz4AGgQLQgAWB
+				AtGBAtOABoAGgAaBAtWBAtaBAtiABYAGgAaBAtmBAtqA
+				BYAGgAaACYAGgQLbgAWAGVhtZW51Rm9udFtmaXhlZFNo
+				YWRvd1poYWxmSGVpZ2h0WGZvbnRTaXplWWxvZ29MYXJn
+				ZVpzaG93UGFyZW50WHNob3dMb2dvWHRpdGxlVGFnVHpv
+				bmVYcG9zaXRpb25cbWF0Y2hQYWRkaW5nVXRpdGxlWnNo
+				b3dTbG9nYW5XZGl2aWRlclRzaG93V3BhZGRpbmdac2hh
+				ZG93Qmx1clpob3ZlckNvbG9yV2lzSG92ZXJZYmFzZUNv
+				bG9yXxAPbW9iaWxlQmFja0xhYmVsW21vYmlsZUxhYmVs
+				WXRpdGxlQXJlYVl6b25lQWxpZ25dc2hhZG93T3BhY2l0
+				eVpzdGlja3lMb2dvWXRpdGxlRm9udFlzaG93VGl0bGVW
+				aGVpZ2h0W2FjdGl2ZUNvbG9yW3N0eWxlQWN0aXZlXmhp
+				ZGVMb2dvTW9iaWxlWnN0aWNreUhpZGVfEBBicmVha3Bv
+				aW50Q3VzdG9tWmxvZ29NZWRpdW1ZdGV4dENvbG9yXWZ1
+				bGxXaWR0aE1lbnVXY29udGFpblxjdXN0b21TaXppbmda
+				YnJlYWtwb2ludFZzbG9nYW5fEBBoaWRlU2xvZ2FuTW9i
+				aWxlXxAPY29sbGFwc2VIZWFkaW5nW3pvbmVEaXZpZGVy
+				W2ZpeGVkT2Zmc2V0XxAQc3VibWVudUluZGljYXRvclls
 				b2dvU21hbGxfEA9oaWRlVGl0bGVNb2JpbGVfEBBmb250
 				LWZhbWlseS10ZXh0VXNvbGlk0wC1AHcALA2FDYwAuKYN
 				hg2HDYgNiQ2KDYuBAq2BAq6BAq+BArCBArGBArKmDY0N
 				jgA7DZANkQ2SgQKzgQK0gAWBArWBAraBAreAGVRhcmcx
 				UmlkVXJvdW5kVGFyZzJYb3BlcmF0b3JUdHlwZVloZWln
 				aHRbMF1aaGFsZkhlaWdodBACUS9UbWF0aNMAgACBACwN
-				oAB1AINKMCAwIDAgMC40AIAPVXJpZ2h01wOfACwDoAOh
-				A6IDowOkAFEDpgBzAHANpwBRAFGAAIDUCIECu4AAgADT
-				ALUAdwAsDasNrgC4ogOtA66A0YDSogK4AriA04DTgBlU
-				aGlkZVpTaXRlIFRpdGxl0gB3ACwNtQDEog22DbaBAr+B
-				Ar+AKhAPUnJ30gB3ACwNvADEpg29Db4DjgOOA44DjoEC
-				woECw4DOgM6AzoDOgCrTAIAAgQAsDcUAdQCDSzAgMCAw
-				IDAuMTUAgA/VBTkAgACBBToALA3IDckAdQU9AINPECgw
-				Ljk4MDM5MjE1NjkgMC45ODAzOTIxNTY5IDAuOTgwMzky
-				MTU2OSAxTxAnMC45NzUyOTYyNTg5IDAuOTc1Mjk2MjU4
-				OSAwLjk3NTI5NjI1ODkAgQE5gA/SAHcALA3NAMSmDc4N
-				zwOOA44DjgOOgQLFgQLGgM6AzoDOgM6AKtMAgACBACwN
-				1gB1AINPECwwLjk4MDM5MjE1NjkgMC45ODAzOTIxNTY5
-				IDAuOTgwMzkyMTU2OSAwLjk1AIAP0wCAAIEALA3ZAHUA
-				g08QJzAuNDUwOTgwNDI0OSAwLjQ1MDk4MDQyNDkgMC40
-				NTA5ODA0MjQ5AIAPVEJhY2tUTWVudVpzaXRlLXNldHVw
-				VGxlZnRTYWxsECheZm9udC1mYW1pbHktaDHSAHcALA3j
-				AMSkATsBOw3mDeaAMIAwgQLPgQLPgCoiQaAAANIAdwAs
-				DesAxKYN7ALZA44DjgOOA46BAtGA54DOgM6AzoDOgCrT
-				AIAAgQAsDfQAdQCDTxASMSAxIDEgMC4xNTAwMDAwMDYA
-				gA8RAljXA58ALAOgA6EDogOjA6QAUQOmAHMAcA37AFEA
-				UYAAgNQIgQLUgACAANMAtQB3ACwN/w4CALiiA60DroDR
-				gNKiArgCuIDTgNOAGdMAgACBACwOBwB1AINPECcwLjM0
-				NTA5ODAzOTIgMC4zNDUwOTgwMzkyIDAuMzQ5MDE5NjA3
-				OACAD1g2Mi41NjNlbVZTbG9nYW7SAHcALA4MAMSiDg0O
-				DoEC2YEC2oAqIz/qAAAAAAAAIz/xAAAAAAAA1wOfACwD
+				oAB1AINKMCAwIDAgMC40AIAP0gB3ACwNowDEog2kDaWB
+				ArqBAruAKiM/6gAAAAAAACM/8QAAAAAAAFVyaWdodNcD
+				nwAsA6ADoQOiA6MDpABRA6YAcwBwDa4AUQBRgACA1AiB
+				Ar6AAIAA0wC1AHcALA2yDbUAuKIDrQOugNGA0qICuAK4
+				gNOA04AZVGhpZGVaU2l0ZSBUaXRsZdIAdwAsDbwAxKIN
+				vQ29gQLCgQLCgCoQD1Jyd9IAdwAsDcMAxKYNxA3FA44D
+				jgOOA46BAsWBAsaAzoDOgM6AzoAq0wCAAIEALA3MAHUA
+				g0swIDAgMCAwLjE1AIAP1QU5AIAAgQU6ACwNzw3QAHUF
+				PQCDTxAoMC45ODAzOTIxNTY5IDAuOTgwMzkyMTU2OSAw
+				Ljk4MDM5MjE1NjkgMU8QJzAuOTc1Mjk2MjU4OSAwLjk3
+				NTI5NjI1ODkgMC45NzUyOTYyNTg5AIEBOYAP0gB3ACwN
+				1ADEpg3VDdYDjgOOA44DjoECyIECyYDOgM6AzoDOgCrT
+				AIAAgQAsDd0AdQCDTxAsMC45ODAzOTIxNTY5IDAuOTgw
+				MzkyMTU2OSAwLjk4MDM5MjE1NjkgMC45NQCAD9MAgACB
+				ACwN4AB1AINPECcwLjQ1MDk4MDQyNDkgMC40NTA5ODA0
+				MjQ5IDAuNDUwOTgwNDI0OQCAD1RCYWNrVE1lbnVac2l0
+				ZS1zZXR1cFRsZWZ0U2FsbBAoXmZvbnQtZmFtaWx5LWgx
+				0gB3ACwN6gDEpAE7ATsN7Q3tgDCAMIEC0oEC0oAqIkGg
+				AADSAHcALA3yAMSmDfMC2QOOA44DjgOOgQLUgOeAzoDO
+				gM6AzoAq0wCAAIEALA37AHUAg08QEjEgMSAxIDAuMTUw
+				MDAwMDA2AIAPEQJY1wOfACwDoAOhA6IDowOkAFEDpgBz
+				AHAOAgBRAFGAAIDUCIEC14AAgADTALUAdwAsDgYOCQC4
+				ogOtA66A0YDSogK4AriA04DTgBnTAIAAgQAsDg4AdQCD
+				TxAnMC4zNDUwOTgwMzkyIDAuMzQ1MDk4MDM5MiAwLjM0
+				OTAxOTYwNzgAgA9YNjIuNTYzZW1WU2xvZ2Fu1wOfACwD
 				oAOhA6IDowOkAFEDpgBzAHAOFgBRAFGAAIDUCIEC3IAA
 				gADTALUAdwAsDhoOHQC4ogOtA66A0YDSogK4AriA04DT
 				gBnSAHcALA4iAMSkDiMOJA4lDiaBAt6BAu6BAv6BAw6A
@@ -1979,7 +1981,7 @@
 				2IEDg4EE2YEDhoEE2oEDgoEDhID7gQGCgQGBgQN9gQRZ
 				rxAPGpcSfgA5GpoAOQA7Gp0angK4F48aoRqiDTcCuAA7
 				gQTbgQOMgAaBBNyABoAFgQTdgQTegNOBBGaBBN+BBOCB
-				AsqA04AFgBlabGluZUhlaWdodFpjdXN0b21TaXplXmxp
+				As2A04AFgBlabGluZUhlaWdodFpjdXN0b21TaXplXmxp
 				bmtIb3ZlckNvbG9y0wCAAIEALBqrAHUAg08QHDAgMC41
 				NDkwMTk2MzQ3IDAuNzI5NDExNzgwOACADyM/+ZmZmZmZ
 				mtIAdwAsGq8AxKEAOYAGgCrTAIAAgQAsGrMAdQCDTxAc
@@ -4692,7 +4694,7 @@
 				OQA5gAaABoAq0gB3ACxNOQDEpE06AudNPE08gQyugQEP
 				gQyvgQyvgCoRAeAiQ5YAANIAdwAsTUIAxKQAWgBaAFoA
 				WoAJgAmACYAJgCrSAHcALE1JAHukADsAOQA5ADmABYAG
-				gAaABoAN0gB3ACxNUADEpA05DTlNU01TgQLMgQLMgQyz
+				gAaABoAN0gB3ACxNUADEpA05DTlNU01TgQLPgQLPgQyz
 				gQyzgCoiQMAAANIAdwAsTVgAxKIAUgBSgAuAC4AqXWZh
 				LWNhcmV0LWRvd25aQ2xvc2UgVGV4dNIAdwAsTV8AxKIA
 				Uk1hgAuBDLiAKiM/7mZmZmZmZlpTYW5zLVNlcmlmEDLS
@@ -6235,36 +6237,36 @@
 				AJ5QAACeUwAAnlYAAJ5ZAACeXAAAnl8AAJ5iAACeZQAA
 				nmgAAJ5rAACebgAAnnEAAJ50AACedwAAnnoAAJ59AACe
 				gAAAnoMAAJ6GAACeiQAAnowAAJ77AACe/gAAnwEAAJ8D
-				AACfBgAAnwkAAJ8LAACfDgAAnxEAAJ8TAACfFQAAnxcA
-				AJ8ZAACfHAAAnx4AAJ8gAACfIwAAnyUAAJ8nAACfKQAA
-				nywAAJ8vAACfMQAAnzQAAJ82AACfOQAAnzwAAJ8/AACf
-				QgAAn0UAAJ9IAACfSwAAn00AAJ9QAACfUgAAn1UAAJ9Y
-				AACfWgAAn1wAAJ9eAACfYQAAn2QAAJ9nAACfaQAAn2sA
-				AJ9tAACfcAAAn3MAAJ91AACfdwAAn3kAAJ97AACffgAA
-				n4EAAJ+DAACfhQAAn44AAJ+aAACfpQAAn7EAAJ+7AACf
-				xgAAn88AAJ/YAACf3QAAn+YAAJ/zAACf+QAAoAQAAKAM
-				AACgEQAAoBkAAKAkAACgLwAAoDcAAKBBAACgUwAAoF8A
-				AKBpAACgcwAAoIEAAKCMAACglgAAoKAAAKCnAACgswAA
-				oL8AAKDOAACg2QAAoOwAAKD3AAChAQAAoQ8AAKEXAACh
-				JAAAoS8AAKE2AAChSQAAoVsAAKFnAAChegAAoYMAAKGN
+				AACfBgAAnwkAAJ8MAACfDwAAnxIAAJ8UAACfFgAAnxgA
+				AJ8aAACfHQAAnx8AAJ8hAACfJAAAnyYAAJ8oAACfKgAA
+				ny0AAJ8wAACfMgAAnzUAAJ83AACfOgAAnz0AAJ9AAACf
+				QwAAn0YAAJ9JAACfTAAAn04AAJ9RAACfUwAAn1YAAJ9Z
+				AACfWwAAn10AAJ9fAACfYgAAn2UAAJ9oAACfagAAn2wA
+				AJ9uAACfcQAAn3QAAJ92AACfeAAAn3oAAJ98AACffgAA
+				n4EAAJ+DAACfhQAAn44AAJ+aAACfpQAAn64AAJ+4AACf
+				wwAAn8wAAJ/VAACf2gAAn+MAAJ/wAACf9gAAoAEAAKAJ
+				AACgDgAAoBYAAKAhAACgLAAAoDQAAKA+AACgUAAAoFwA
+				AKBmAACgcAAAoH4AAKCJAACgkwAAoJ0AAKCkAACgsAAA
+				oLwAAKDLAACg1gAAoOkAAKD0AACg/gAAoQwAAKEUAACh
+				IQAAoSwAAKEzAAChRgAAoVgAAKFkAAChcAAAoYMAAKGN
 				AAChnwAAobIAAKG4AAChxQAAodIAAKHVAACh2AAAodsA
 				AKHeAACh4QAAoeQAAKHxAACh9AAAofcAAKH5AACh/AAA
 				of8AAKICAACiBAAAogkAAKIMAACiEgAAohcAAKIgAACi
 				JQAAoi8AAKI6AACiPAAAoj4AAKJDAACiUAAAolsAAKJd
-				AACiYwAAooAAAKKCAACihAAAooUAAKKIAACiigAAoowA
-				AKKZAACingAAoqAAAKKiAACipwAAoqkAAKKrAACirQAA
-				orIAAKK9AACixgAAossAAKLOAACi0QAAotMAAKLVAACi
-				2AAAouEAAKLuAACi8QAAovQAAKL2AACi+AAAovoAAKL8
-				AACi/gAAowsAAKMXAACjGQAAoy4AAKNZAACjgwAAo4YA
-				AKOIAACjkQAAo54AAKOhAACjpAAAo6YAAKOoAACjqgAA
-				o6wAAKOuAACjuwAAo+oAAKPsAACj+QAApCMAAKQlAACk
-				KgAApC8AAKQ6AACkPwAApEMAAKRFAACkVAAApF0AAKRm
-				AACkaAAApGoAAKRtAACkcAAApHIAAKR3AACkgAAApI0A
-				AKSQAACkkgAApJQAAKSWAACkmAAApJoAAKScAACkqQAA
-				pL4AAKTAAACkwwAApOAAAKTiAACk5AAApOUAAKToAACk
-				6gAApOwAAKT5AACk/gAApQAAAKUCAAClBwAApQkAAKUL
-				AAClDQAApRoAAKVEAAClRgAApU8AAKVWAAClXwAApWQA
-				AKVnAAClagAApWwAAKV1AAClfgAApZsAAKWdAAClnwAA
+				AACiZgAAomsAAKJuAACicQAAonMAAKJ8AACihQAAoosA
+				AKKoAACiqgAAoqwAAKKtAACisAAAorIAAKK0AACiwQAA
+				osYAAKLIAACiygAAos8AAKLRAACi0wAAotUAAKLaAACi
+				5QAAou4AAKLzAACi9gAAovkAAKL7AACi/QAAowAAAKMJ
+				AACjFgAAoxkAAKMcAACjHgAAoyAAAKMiAACjJAAAoyYA
+				AKMzAACjPwAAo0EAAKNWAACjgQAAo6sAAKOuAACjsAAA
+				o7kAAKPGAACjyQAAo8wAAKPOAACj0AAAo9IAAKPUAACj
+				1gAAo+MAAKQSAACkFAAApCEAAKRLAACkTQAApFIAAKRX
+				AACkYgAApGcAAKRrAACkbQAApHwAAKSFAACkjgAApJAA
+				AKSSAACklQAApJgAAKSaAACknwAApKgAAKS1AACkuAAA
+				pLoAAKS8AACkvgAApMAAAKTCAACkxAAApNEAAKTmAACk
+				6AAApOsAAKUIAAClCgAApQwAAKUNAAClEAAApRIAAKUU
+				AAClIQAApSYAAKUoAAClKgAApS8AAKUxAAClMwAApTUA
+				AKVCAAClbAAApW4AAKV3AAClfgAApZsAAKWdAAClnwAA
 				paAAAKWjAAClpQAApacAAKW0AACluQAApbsAAKW9AACl
 				wgAApcQAAKXGAAClyAAApdEAAKXaAACl3QAApeAAAKXj
 				AACl5gAApegAAKbHAACmyAAApsoAAKbNAACm0AAAptIA
