--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/3-Projects/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/3-Projects/Data/Contents.plist
@@ -13,9 +13,10 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
 					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
 					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
 					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
 					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
@@ -42,6 +43,7 @@
 					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
 					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>C3045290-9DD8-4285-B611-D18187DC7F54.png</string>
 					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
@@ -52,10 +54,10 @@
 					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
 					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
 					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
-					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
+					<string>DCBB782F-34F6-4B68-9D92-6FCEDA3FBE69.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #134136F6A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
@@ -104,9 +106,9 @@
 				DVwNXQ1eDV8NYA1hDWINYw1kDWUNZg1nDWgNaQ1qDWsN
 				bA1tDW4Nbw1wDXENcg1zDXQNdQ12DXcNeA15DXoNew18
 				DX0Nfg1/DYANgQ2CDYMNhA2UDZUNlg2XDZgNmQ2aDZsN
-				nA2dDZ4Nnw2iDaMNqg2yDbMNtA25DboNuw3EDccNzA3V
-				DdgN2w3cDd0N3g3fDeAN4Q3iDekN6g3zDfYN9w3+DgYO
-				CQ4KDgsOEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
+				nA2dDZ4Nnw2iDacNqA2pDaoNsQ25DboNuw3ADcENwg3L
+				Dc4N0w3cDd8N4g3jDeQN5Q3mDecN6A3pDfAN8Q36Df0N
+				/g4FDg0OEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
 				Dn0OhA6LDpIOmQ6dDqAOoQ7ZDtwO3Q7eDuMO5g7tDvMO
 				9g79DwQPCw8SDxYPGQ8aD1IPVQ9WD1cPXA9fD2YPbA9v
 				D3YPfQ+ED4sPjw+SD5MPwg/FD8YPxw/MD88P1g/cD98P
@@ -1446,60 +1448,60 @@
 				gQKKgQKLgQKMgQKNgQKOgQKPgQKQgQKRgQF8gQKSgQKT
 				gQKUgQKVgQKWgQKXgQKYgQKZgQKagQKbgQKcgQKdgQKe
 				gQKfgQKggQKhgQKigQKjgQKkgQKlgQKmgQKngQKogQKp
-				rxA2DRsNHAA5DR4NHwA5DSENIgA7ADsCyQBSDScCnAA7
+				rxA2DRsNHAA5DR4NHw0gDSENIgA7ADsCyQBSDScCnAA7
 				DSoAOQA5ArgNLg0vAUANMQA7DTMNNA01DTYNNw04DTkA
 				OQ07ADsNPQ0+ADkAOQA5DUINQw1EADsAOQA5DUgNSQA7
-				ADkAWgA5DU4NTwA7gQKqgQKrgAaBAqyBAriABoECuYEC
-				uoAFgAWA8oALgQK8gLeABYECvYAGgAaA04ECvoECwIAv
-				gQLBgAWBAsSBAseBAsiBAsmBAsqBAsuBAsyABoECzYAF
-				gQLOgQLQgAaABoAGgQLSgQLTgQLVgAWABoAGgQLWgQLX
-				gAWABoAJgAaBAtiBAtuABYAZWG1lbnVGb250W2ZpeGVk
-				U2hhZG93WmhhbGZIZWlnaHRbem9uZURpdmlkZXJZbG9n
-				b0xhcmdlWnNob3dQYXJlbnRYc2hvd0xvZ29YdGl0bGVU
-				YWdUem9uZVhwb3NpdGlvblxtYXRjaFBhZGRpbmdVdGl0
-				bGVac2hvd1Nsb2dhbldkaXZpZGVyVHNob3dXcGFkZGlu
-				Z1pzaGFkb3dCbHVyWmhvdmVyQ29sb3JXaXNIb3Zlclli
-				YXNlQ29sb3JfEA9tb2JpbGVCYWNrTGFiZWxbbW9iaWxl
-				TGFiZWxZdGl0bGVBcmVhWXpvbmVBbGlnbl1zaGFkb3dP
-				cGFjaXR5WnN0aWNreUxvZ29ZdGl0bGVGb250WXNob3dU
-				aXRsZVZoZWlnaHRbYWN0aXZlQ29sb3Jbc3R5bGVBY3Rp
-				dmVeaGlkZUxvZ29Nb2JpbGVac3RpY2t5SGlkZV8QEGJy
-				ZWFrcG9pbnRDdXN0b21abG9nb01lZGl1bVl0ZXh0Q29s
-				b3JdZnVsbFdpZHRoTWVudVdjb250YWluXGN1c3RvbVNp
-				emluZ1picmVha3BvaW50VnNsb2dhbl8QEGhpZGVTbG9n
-				YW5Nb2JpbGVfEA9jb2xsYXBzZUhlYWRpbmdbZml4ZWRP
-				ZmZzZXRfEBBzdWJtZW51SW5kaWNhdG9yWGZvbnRTaXpl
+				ADkAOQBaADkNTwA7gQKqgQKrgAaBAqyBAriBArmBAryB
+				Ar2ABYAFgPKAC4ECv4C3gAWBAsCABoAGgNOBAsGBAsOA
+				L4ECxIAFgQLHgQLKgQLLgQLMgQLNgQLOgQLPgAaBAtCA
+				BYEC0YEC04AGgAaABoEC1YEC1oEC2IAFgAaABoEC2YEC
+				2oAFgAaABoAJgAaBAtuABYAZWG1lbnVGb250W2ZpeGVk
+				U2hhZG93WmhhbGZIZWlnaHRYZm9udFNpemVZbG9nb0xh
+				cmdlWnNob3dQYXJlbnRYc2hvd0xvZ29YdGl0bGVUYWdU
+				em9uZVhwb3NpdGlvblxtYXRjaFBhZGRpbmdVdGl0bGVa
+				c2hvd1Nsb2dhbldkaXZpZGVyVHNob3dXcGFkZGluZ1pz
+				aGFkb3dCbHVyWmhvdmVyQ29sb3JXaXNIb3ZlclliYXNl
+				Q29sb3JfEA9tb2JpbGVCYWNrTGFiZWxbbW9iaWxlTGFi
+				ZWxZdGl0bGVBcmVhWXpvbmVBbGlnbl1zaGFkb3dPcGFj
+				aXR5WnN0aWNreUxvZ29ZdGl0bGVGb250WXNob3dUaXRs
+				ZVZoZWlnaHRbYWN0aXZlQ29sb3Jbc3R5bGVBY3RpdmVe
+				aGlkZUxvZ29Nb2JpbGVac3RpY2t5SGlkZV8QEGJyZWFr
+				cG9pbnRDdXN0b21abG9nb01lZGl1bVl0ZXh0Q29sb3Jd
+				ZnVsbFdpZHRoTWVudVdjb250YWluXGN1c3RvbVNpemlu
+				Z1picmVha3BvaW50VnNsb2dhbl8QEGhpZGVTbG9nYW5N
+				b2JpbGVfEA9jb2xsYXBzZUhlYWRpbmdbem9uZURpdmlk
+				ZXJbZml4ZWRPZmZzZXRfEBBzdWJtZW51SW5kaWNhdG9y
 				WWxvZ29TbWFsbF8QD2hpZGVUaXRsZU1vYmlsZV8QEGZv
 				bnQtZmFtaWx5LXRleHRVc29saWTTALUAdwAsDYUNjAC4
 				pg2GDYcNiA2JDYoNi4ECrYECroECr4ECsIECsYECsqYN
 				jQ2OADsNkA2RDZKBArOBArSABYECtYECtoECt4AZVGFy
 				ZzFSaWRVcm91bmRUYXJnMlhvcGVyYXRvclR0eXBlWWhl
 				aWdodFswXVpoYWxmSGVpZ2h0EAJRL1RtYXRo0wCAAIEA
-				LA2gAHUAg0owIDAgMCAwLjQAgA9VcmlnaHTXA58ALAOg
-				A6EDogOjA6QAUQOmAHMAcA2nAFEAUYAAgNQIgQK7gACA
-				ANMAtQB3ACwNqw2uALiiA60DroDRgNKiArgCuIDTgNOA
-				GVRoaWRlWlNpdGUgVGl0bGXSAHcALA21AMSiDbYNtoEC
-				v4ECv4AqEA9ScnfSAHcALA28AMSmDb0NvgOOA44DjgOO
-				gQLCgQLDgM6AzoDOgM6AKtMAgACBACwNxQB1AINLMCAw
-				IDAgMC4xNQCAD9UFOQCAAIEFOgAsDcgNyQB1BT0Ag08Q
-				KDAuOTgwMzkyMTU2OSAwLjk4MDM5MjE1NjkgMC45ODAz
-				OTIxNTY5IDFPECcwLjk3NTI5NjI1ODkgMC45NzUyOTYy
-				NTg5IDAuOTc1Mjk2MjU4OQCBATmAD9IAdwAsDc0AxKYN
-				zg3PA44DjgOOA46BAsWBAsaAzoDOgM6AzoAq0wCAAIEA
-				LA3WAHUAg08QLDAuOTgwMzkyMTU2OSAwLjk4MDM5MjE1
-				NjkgMC45ODAzOTIxNTY5IDAuOTUAgA/TAIAAgQAsDdkA
-				dQCDTxAnMC40NTA5ODA0MjQ5IDAuNDUwOTgwNDI0OSAw
-				LjQ1MDk4MDQyNDkAgA9UQmFja1RNZW51WnNpdGUtc2V0
-				dXBUbGVmdFNhbGwQKF5mb250LWZhbWlseS1oMdIAdwAs
-				DeMAxKQBOwE7DeYN5oAwgDCBAs+BAs+AKiJBoAAA0gB3
-				ACwN6wDEpg3sAtkDjgOOA44DjoEC0YDngM6AzoDOgM6A
-				KtMAgACBACwN9AB1AINPEBIxIDEgMSAwLjE1MDAwMDAw
-				NgCADxECWNcDnwAsA6ADoQOiA6MDpABRA6YAcwBwDfsA
-				UQBRgACA1AiBAtSAAIAA0wC1AHcALA3/DgIAuKIDrQOu
-				gNGA0qICuAK4gNOA04AZ0wCAAIEALA4HAHUAg08QJzAu
-				MzQ1MDk4MDM5MiAwLjM0NTA5ODAzOTIgMC4zNDkwMTk2
-				MDc4AIAPWDYyLjU2M2VtVlNsb2dhbtIAdwAsDgwAxKIO
-				DQ4OgQLZgQLagCojP+oAAAAAAAAjP/EAAAAAAADXA58A
+				LA2gAHUAg0owIDAgMCAwLjQAgA/SAHcALA2jAMSiDaQN
+				pYECuoECu4AqIz/qAAAAAAAAIz/xAAAAAAAAVXJpZ2h0
+				1wOfACwDoAOhA6IDowOkAFEDpgBzAHANrgBRAFGAAIDU
+				CIECvoAAgADTALUAdwAsDbINtQC4ogOtA66A0YDSogK4
+				AriA04DTgBlUaGlkZVpTaXRlIFRpdGxl0gB3ACwNvADE
+				og29Db2BAsKBAsKAKhAPUnJ30gB3ACwNwwDEpg3EDcUD
+				jgOOA44DjoECxYECxoDOgM6AzoDOgCrTAIAAgQAsDcwA
+				dQCDSzAgMCAwIDAuMTUAgA/VBTkAgACBBToALA3PDdAA
+				dQU9AINPECgwLjk4MDM5MjE1NjkgMC45ODAzOTIxNTY5
+				IDAuOTgwMzkyMTU2OSAxTxAnMC45NzUyOTYyNTg5IDAu
+				OTc1Mjk2MjU4OSAwLjk3NTI5NjI1ODkAgQE5gA/SAHcA
+				LA3UAMSmDdUN1gOOA44DjgOOgQLIgQLJgM6AzoDOgM6A
+				KtMAgACBACwN3QB1AINPECwwLjk4MDM5MjE1NjkgMC45
+				ODAzOTIxNTY5IDAuOTgwMzkyMTU2OSAwLjk1AIAP0wCA
+				AIEALA3gAHUAg08QJzAuNDUwOTgwNDI0OSAwLjQ1MDk4
+				MDQyNDkgMC40NTA5ODA0MjQ5AIAPVEJhY2tUTWVudVpz
+				aXRlLXNldHVwVGxlZnRTYWxsECheZm9udC1mYW1pbHkt
+				aDHSAHcALA3qAMSkATsBOw3tDe2AMIAwgQLSgQLSgCoi
+				QaAAANIAdwAsDfIAxKYN8wLZA44DjgOOA46BAtSA54DO
+				gM6AzoDOgCrTAIAAgQAsDfsAdQCDTxASMSAxIDEgMC4x
+				NTAwMDAwMDYAgA8RAljXA58ALAOgA6EDogOjA6QAUQOm
+				AHMAcA4CAFEAUYAAgNQIgQLXgACAANMAtQB3ACwOBg4J
+				ALiiA60DroDRgNKiArgCuIDTgNOAGdMAgACBACwODgB1
+				AINPECcwLjM0NTA5ODAzOTIgMC4zNDUwOTgwMzkyIDAu
+				MzQ5MDE5NjA3OACAD1g2Mi41NjNlbVZTbG9nYW7XA58A
 				LAOgA6EDogOjA6QAUQOmAHMAcA4WAFEAUYAAgNQIgQLc
 				gACAANMAtQB3ACwOGg4dALiiA60DroDRgNKiArgCuIDT
 				gNOAGdIAdwAsDiIAxKQOIw4kDiUOJoEC3oEC7oEC/oED
@@ -2137,7 +2139,7 @@
 				gQTYgQODgQTZgQOGgQTagQOCgQOEgPuBAYKBAYGBA32B
 				BFmvEA8alxJ+ADkamgA5ADsanRqeArgXjxqhGqINNwK4
 				ADuBBNuBA4yABoEE3IAGgAWBBN2BBN6A04EEZoEE34EE
-				4IECyoDTgAWAGVpsaW5lSGVpZ2h0WmN1c3RvbVNpemVe
+				4IECzYDTgAWAGVpsaW5lSGVpZ2h0WmN1c3RvbVNpemVe
 				bGlua0hvdmVyQ29sb3LTAIAAgQAsGqsAdQCDTxAcMCAw
 				LjU0OTAxOTYzNDcgMC43Mjk0MTE3ODA4AIAPIz/5mZmZ
 				mZma0gB3ACwarwDEoQA5gAaAKtMAgACBACwaswB1AINP
@@ -9491,7 +9493,7 @@
 				AHcALKRWAMSkpFcC56RZpFmBGLyBAQ+BGL2BGL2AKhEB
 				4CJDlgAA0gB3ACykXwDEpABaAFoAWgBagAmACYAJgAmA
 				KtIAdwAspGYAe6QAOwA5ADkAOYAFgAaABoAGgA3SAHcA
-				LKRtAMSkDTkNOaRwpHCBAsyBAsyBGMGBGMGAKiJAwAAA
+				LKRtAMSkDTkNOaRwpHCBAs+BAs+BGMGBGMGAKiJAwAAA
 				0gB3ACykdQDEogBSAFKAC4ALgCpdZmEtY2FyZXQtZG93
 				blpDbG9zZSBUZXh00gB3ACykfADEogBSpH6AC4EYxoAq
 				Iz/uZmZmZmZmWlNhbnMtU2VyaWYQMtIAdwAspIQAxKIA
@@ -10486,36 +10488,36 @@
 				srAAALKzAACytgAAsrkAALK8AACyvwAAssIAALLFAACy
 				yAAAsssAALLOAACy0QAAstQAALLXAACy2gAAst0AALLg
 				AACy4wAAsuYAALLpAACy7AAAs1sAALNeAACzYQAAs2MA
-				ALNmAACzaQAAs2sAALNuAACzcQAAs3MAALN1AACzdwAA
-				s3kAALN8AACzfgAAs4AAALODAACzhQAAs4cAALOJAACz
-				jAAAs48AALORAACzlAAAs5YAALOZAACznAAAs58AALOi
-				AACzpQAAs6gAALOrAACzrQAAs7AAALOyAACztQAAs7gA
-				ALO6AACzvAAAs74AALPBAACzxAAAs8cAALPJAACzywAA
-				s80AALPQAACz0wAAs9UAALPXAACz2QAAs9sAALPeAACz
-				4QAAs+MAALPlAACz7gAAs/oAALQFAAC0EQAAtBsAALQm
-				AAC0LwAAtDgAALQ9AAC0RgAAtFMAALRZAAC0ZAAAtGwA
-				ALRxAAC0eQAAtIQAALSPAAC0lwAAtKEAALSzAAC0vwAA
-				tMkAALTTAAC04QAAtOwAALT2AAC1AAAAtQcAALUTAAC1
-				HwAAtS4AALU5AAC1TAAAtVcAALVhAAC1bwAAtXcAALWE
-				AAC1jwAAtZYAALWpAAC1uwAAtccAALXaAAC14wAAte0A
+				ALNmAACzaQAAs2wAALNvAACzcgAAs3QAALN2AACzeAAA
+				s3oAALN9AACzfwAAs4EAALOEAACzhgAAs4gAALOKAACz
+				jQAAs5AAALOSAACzlQAAs5cAALOaAACznQAAs6AAALOj
+				AACzpgAAs6kAALOsAACzrgAAs7EAALOzAACztgAAs7kA
+				ALO7AACzvQAAs78AALPCAACzxQAAs8gAALPKAACzzAAA
+				s84AALPRAACz1AAAs9YAALPYAACz2gAAs9wAALPeAACz
+				4QAAs+MAALPlAACz7gAAs/oAALQFAAC0DgAAtBgAALQj
+				AAC0LAAAtDUAALQ6AAC0QwAAtFAAALRWAAC0YQAAtGkA
+				ALRuAAC0dgAAtIEAALSMAAC0lAAAtJ4AALSwAAC0vAAA
+				tMYAALTQAAC03gAAtOkAALTzAAC0/QAAtQQAALUQAAC1
+				HAAAtSsAALU2AAC1SQAAtVQAALVeAAC1bAAAtXQAALWB
+				AAC1jAAAtZMAALWmAAC1uAAAtcQAALXQAAC14wAAte0A
 				ALX/AAC2EgAAthgAALYlAAC2MgAAtjUAALY4AAC2OwAA
 				tj4AALZBAAC2RAAAtlEAALZUAAC2VwAAtlkAALZcAAC2
 				XwAAtmIAALZkAAC2aQAAtmwAALZyAAC2dwAAtoAAALaF
 				AAC2jwAAtpoAALacAAC2ngAAtqMAALawAAC2uwAAtr0A
-				ALbDAAC24AAAtuIAALbkAAC25QAAtugAALbqAAC27AAA
-				tvkAALb+AAC3AAAAtwIAALcHAAC3CQAAtwsAALcNAAC3
-				EgAAtx0AALcmAAC3KwAAty4AALcxAAC3MwAAtzUAALc4
-				AAC3QQAAt04AALdRAAC3VAAAt1YAALdYAAC3WgAAt1wA
-				ALdeAAC3awAAt3cAALd5AAC3jgAAt7kAALfjAAC35gAA
-				t+gAALfxAAC3/gAAuAEAALgEAAC4BgAAuAgAALgKAAC4
-				DAAAuA4AALgbAAC4SgAAuEwAALhZAAC4gwAAuIUAALiK
-				AAC4jwAAuJoAALifAAC4owAAuKUAALi0AAC4vQAAuMYA
-				ALjIAAC4ygAAuM0AALjQAAC40gAAuNcAALjgAAC47QAA
-				uPAAALjyAAC49AAAuPYAALj4AAC4+gAAuPwAALkJAAC5
-				HgAAuSAAALkjAAC5QAAAuUIAALlEAAC5RQAAuUgAALlK
-				AAC5TAAAuVkAALleAAC5YAAAuWIAALlnAAC5aQAAuWsA
-				ALltAAC5egAAuaQAALmmAAC5rwAAubYAALm/AAC5xAAA
-				uccAALnKAAC5zAAAudUAALneAAC5+wAAuf0AALn/AAC6
+				ALbGAAC2ywAAts4AALbRAAC20wAAttwAALblAAC26wAA
+				twgAALcKAAC3DAAAtw0AALcQAAC3EgAAtxQAALchAAC3
+				JgAAtygAALcqAAC3LwAAtzEAALczAAC3NQAAtzoAALdF
+				AAC3TgAAt1MAALdWAAC3WQAAt1sAALddAAC3YAAAt2kA
+				ALd2AAC3eQAAt3wAALd+AAC3gAAAt4IAALeEAAC3hgAA
+				t5MAALefAAC3oQAAt7YAALfhAAC4CwAAuA4AALgQAAC4
+				GQAAuCYAALgpAAC4LAAAuC4AALgwAAC4MgAAuDQAALg2
+				AAC4QwAAuHIAALh0AAC4gQAAuKsAALitAAC4sgAAuLcA
+				ALjCAAC4xwAAuMsAALjNAAC43AAAuOUAALjuAAC48AAA
+				uPIAALj1AAC4+AAAuPoAALj/AAC5CAAAuRUAALkYAAC5
+				GgAAuRwAALkeAAC5IAAAuSIAALkkAAC5MQAAuUYAALlI
+				AAC5SwAAuWgAALlqAAC5bAAAuW0AALlwAAC5cgAAuXQA
+				ALmBAAC5hgAAuYgAALmKAAC5jwAAuZEAALmTAAC5lQAA
+				uaIAALnMAAC5zgAAudcAALneAAC5+wAAuf0AALn/AAC6
 				AAAAugMAALoFAAC6BwAAuhQAALoZAAC6GwAAuh0AALoi
 				AAC6JAAAuiYAALooAAC6MQAAujoAALo9AAC6QAAAukMA
 				ALpGAAC6SAAAuycAALsoAAC7KgAAuy0AALswAAC7MgAA
