--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partnerships/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partnerships/Data/Contents.plist
@@ -13,9 +13,10 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
 					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
 					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
 					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
 					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
@@ -42,6 +43,7 @@
 					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
 					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>C3045290-9DD8-4285-B611-D18187DC7F54.png</string>
 					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
@@ -52,10 +54,10 @@
 					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
 					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
 					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
-					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
+					<string>DCBB782F-34F6-4B68-9D92-6FCEDA3FBE69.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #134136F6A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
@@ -99,9 +101,9 @@
 				4AvhC+IL4wvkC+UL5gvnC+gL6QvqC+sL7AvtC+4L7wvw
 				C/EL8gvzC/QL9Qv2C/cL+Av5C/oL+wv8C/0L/gv/DAAM
 				AQwCDAMMBAwFDAYMBwwIDAkMCgwLDAwMDQwODA8MEAwg
-				DCEMIgwjDCQMJQwmDCcMKAwpDCoMKwwuDC8MNgw+DD8M
-				QAxFDEYMRwxQDFMMWAxhDGQMZwxoDGkMagxrDGwMbQxu
-				DHUMdgx/DIIMgwyKDJIMlQyWDJcMnAydDJ4MpQytDLQM
+				DCEMIgwjDCQMJQwmDCcMKAwpDCoMKwwuDDMMNAw1DDYM
+				PQxFDEYMRwxMDE0MTgxXDFoMXwxoDGsMbgxvDHAMcQxy
+				DHMMdAx1DHwMfQyGDIkMigyRDJkMnAydDJ4MpQytDLQM
 				7AzvDPAM8Qz2DPkNAA0GDQkNEA0XDR4NJQ0pDSwNLQ1l
 				DWgNaQ1qDW8Ncg15DX8Ngg2JDZANlw2eDaINpQ2mDd4N
 				4Q3iDeMN6A3rDfIN+A37DgIOCQ4QDhcOGw4eDh8OTg5R
@@ -1229,61 +1231,61 @@
 				Aj+BAkCBAkGBAkKBAkOBAkSBAkWBAkaBAkeBAkiBAkmB
 				AkqBAkuBAkyBAk2BAk6BAk+BAlCBAlGBAlKBAlOBAlSB
 				AlWBAlaBAleBAliBAlmBAlqBAluBAlyBAl2BAl6vEDYL
-				ogujADkLpQumADkLqAupADsAOwLPAFILrgKiADsLsQA5
+				ogujADkLpQumC6cLqAupADsAOwLPAFILrgKiADsLsQA5
 				ADkCvgu1C7YBRgu4ADsLugu7C7wLvQu+C78LwAA5C8IA
-				OwvEC8UAOQA5ADkLyQvKC8sAOwA5ADkLzwvQADsAOQBa
-				ADkL1QvWADuBAl+BAmCABoECYYECbYAGgQJugQJvgAWA
-				BYDxgAuBAnGAtoAFgQJygAaABoDSgQJzgQJ1gC6BAnaA
-				BYECeYECfIECfYECfoECf4ECgIECgYAGgQKCgAWBAoOB
-				AoWABoAGgAaBAoeBAoiBAoqABYAGgAaBAouBAoyABYAG
-				gAmABoECjYECkIAFgBdYbWVudUZvbnRVc3R5bGVbZml4
-				ZWRTaGFkb3daaGFsZkhlaWdodFt6b25lRGl2aWRlclVh
-				bGlnbllsb2dvTGFyZ2Vac2hvd1BhcmVudFhzaG93TG9n
-				b1h0aXRsZVRhZ1huYXZJbmRleFR6b25lWHBvc2l0aW9u
-				XG1hdGNoUGFkZGluZ1V0aXRsZVpzaG93U2xvZ2FuV2Rp
-				dmlkZXJUc2hvd1dwYWRkaW5nVG1lbnVac2hhZG93Qmx1
-				clpob3ZlckNvbG9yV2lzSG92ZXJZYmFzZUNvbG9yXxAP
-				bW9iaWxlQmFja0xhYmVsW21vYmlsZUxhYmVsWXRpdGxl
-				QXJlYVl6b25lQWxpZ25Vc2NvcGVdc2hhZG93T3BhY2l0
-				eVpzdGlja3lMb2dvWXRpdGxlRm9udFlzaG93VGl0bGVW
-				aGVpZ2h0W2FjdGl2ZUNvbG9yW3N0eWxlQWN0aXZlXmhp
-				ZGVMb2dvTW9iaWxlWnN0aWNreUhpZGVfEBBicmVha3Bv
-				aW50Q3VzdG9tWmxvZ29NZWRpdW1ZdGV4dENvbG9yXWZ1
-				bGxXaWR0aE1lbnVXY29udGFpblxjdXN0b21TaXppbmda
-				YnJlYWtwb2ludFZzbG9nYW5fEBBoaWRlU2xvZ2FuTW9i
-				aWxlXxAPY29sbGFwc2VIZWFkaW5nW2ZpeGVkT2Zmc2V0
-				XxAQc3VibWVudUluZGljYXRvclhmb250U2l6ZVlsb2dv
+				OwvEC8UAOQA5ADkLyQvKC8sAOwA5ADkLzwvQADsAOQA5
+				AFoAOQvWADuBAl+BAmCABoECYYECbYECboECcYECcoAF
+				gAWA8YALgQJ0gLaABYECdYAGgAaA0oECdoECeIAugQJ5
+				gAWBAnyBAn+BAoCBAoGBAoKBAoOBAoSABoEChYAFgQKG
+				gQKIgAaABoAGgQKKgQKLgQKNgAWABoAGgQKOgQKPgAWA
+				BoAGgAmABoECkIAFgBdYbWVudUZvbnRVc3R5bGVbZml4
+				ZWRTaGFkb3daaGFsZkhlaWdodFhmb250U2l6ZVVhbGln
+				bllsb2dvTGFyZ2Vac2hvd1BhcmVudFhzaG93TG9nb1h0
+				aXRsZVRhZ1huYXZJbmRleFR6b25lWHBvc2l0aW9uXG1h
+				dGNoUGFkZGluZ1V0aXRsZVpzaG93U2xvZ2FuV2Rpdmlk
+				ZXJUc2hvd1dwYWRkaW5nVG1lbnVac2hhZG93Qmx1clpo
+				b3ZlckNvbG9yV2lzSG92ZXJZYmFzZUNvbG9yXxAPbW9i
+				aWxlQmFja0xhYmVsW21vYmlsZUxhYmVsWXRpdGxlQXJl
+				YVl6b25lQWxpZ25Vc2NvcGVdc2hhZG93T3BhY2l0eVpz
+				dGlja3lMb2dvWXRpdGxlRm9udFlzaG93VGl0bGVWaGVp
+				Z2h0W2FjdGl2ZUNvbG9yW3N0eWxlQWN0aXZlXmhpZGVM
+				b2dvTW9iaWxlWnN0aWNreUhpZGVfEBBicmVha3BvaW50
+				Q3VzdG9tWmxvZ29NZWRpdW1ZdGV4dENvbG9yXWZ1bGxX
+				aWR0aE1lbnVXY29udGFpblxjdXN0b21TaXppbmdaYnJl
+				YWtwb2ludFZzbG9nYW5fEBBoaWRlU2xvZ2FuTW9iaWxl
+				XxAPY29sbGFwc2VIZWFkaW5nW3pvbmVEaXZpZGVyW2Zp
+				eGVkT2Zmc2V0XxAQc3VibWVudUluZGljYXRvcllsb2dv
 				U21hbGxfEA9oaWRlVGl0bGVNb2JpbGVfEBBmb250LWZh
 				bWlseS10ZXh0VXNvbGlk0wCxAHcALAwRDBgAtKYMEgwT
 				DBQMFQwWDBeBAmKBAmOBAmSBAmWBAmaBAmemDBkMGgA7
 				DBwMHQwegQJogQJpgAWBAmqBAmuBAmyAF1RhcmcxUmlk
 				VXJvdW5kVGFyZzJYb3BlcmF0b3JUdHlwZVloZWlnaHRb
 				MF1aaGFsZkhlaWdodBACUS9UbWF0aNMAgACBACwMLAB1
-				AINKMCAwIDAgMC40AIAPVXJpZ2h01wOlACwDpgOnA6gD
-				qQOqAFEDrABzAHAMMwBRAFGAAIDTCIECcIAAgADTALEA
-				dwAsDDcMOgC0ogOzA7SA0IDRogK+Ar6A0oDSgBdUaGlk
-				ZVpTaXRlIFRpdGxl0gB3ACwMQQDJogxCDEKBAnSBAnSA
-				KRAPUnJ30gB3ACwMSADJpgxJDEoDlAOUA5QDlIECd4EC
-				eIDNgM2AzYDNgCnTAIAAgQAsDFEAdQCDSzAgMCAwIDAu
-				MTUAgA/VBT8AgACBBUAALAxUDFUAdQVDAINPECgwLjk4
-				MDM5MjE1NjkgMC45ODAzOTIxNTY5IDAuOTgwMzkyMTU2
-				OSAxTxAnMC45NzUyOTYyNTg5IDAuOTc1Mjk2MjU4OSAw
-				Ljk3NTI5NjI1ODkAgQE4gA/SAHcALAxZAMmmDFoMWwOU
-				A5QDlAOUgQJ6gQJ7gM2AzYDNgM2AKdMAgACBACwMYgB1
-				AINPECwwLjk4MDM5MjE1NjkgMC45ODAzOTIxNTY5IDAu
-				OTgwMzkyMTU2OSAwLjk1AIAP0wCAAIEALAxlAHUAg08Q
-				JzAuNDUwOTgwNDI0OSAwLjQ1MDk4MDQyNDkgMC40NTA5
-				ODA0MjQ5AIAPVEJhY2tUTWVudVpzaXRlLXNldHVwVGxl
-				ZnRTYWxsECheZm9udC1mYW1pbHktaDHSAHcALAxvAMmk
-				AUEBQQxyDHKAL4AvgQKEgQKEgCkiQaAAANIAdwAsDHcA
-				yaYMeALfA5QDlAOUA5SBAoaA5oDNgM2AzYDNgCnTAIAA
-				gQAsDIAAdQCDTxASMSAxIDEgMC4xNTAwMDAwMDYAgA8R
-				AljXA6UALAOmA6cDqAOpA6oAUQOsAHMAcAyHAFEAUYAA
-				gNMIgQKJgACAANMAsQB3ACwMiwyOALSiA7MDtIDQgNGi
-				Ar4CvoDSgNKAF9MAgACBACwMkwB1AINPECcwLjM0NTA5
-				ODAzOTIgMC4zNDUwOTgwMzkyIDAuMzQ5MDE5NjA3OACA
-				D1g2Mi41NjNlbVZTbG9nYW7SAHcALAyYAMmiDJkMmoEC
-				joECj4ApIz/qAAAAAAAAIz/xAAAAAAAA1wOlACwDpgOn
+				AINKMCAwIDAgMC40AIAP0gB3ACwMLwDJogwwDDGBAm+B
+				AnCAKSM/6gAAAAAAACM/8QAAAAAAAFVyaWdodNcDpQAs
+				A6YDpwOoA6kDqgBRA6wAcwBwDDoAUQBRgACA0wiBAnOA
+				AIAA0wCxAHcALAw+DEEAtKIDswO0gNCA0aICvgK+gNKA
+				0oAXVGhpZGVaU2l0ZSBUaXRsZdIAdwAsDEgAyaIMSQxJ
+				gQJ3gQJ3gCkQD1Jyd9IAdwAsDE8AyaYMUAxRA5QDlAOU
+				A5SBAnqBAnuAzYDNgM2AzYAp0wCAAIEALAxYAHUAg0sw
+				IDAgMCAwLjE1AIAP1QU/AIAAgQVAACwMWwxcAHUFQwCD
+				TxAoMC45ODAzOTIxNTY5IDAuOTgwMzkyMTU2OSAwLjk4
+				MDM5MjE1NjkgMU8QJzAuOTc1Mjk2MjU4OSAwLjk3NTI5
+				NjI1ODkgMC45NzUyOTYyNTg5AIEBOIAP0gB3ACwMYADJ
+				pgxhDGIDlAOUA5QDlIECfYECfoDNgM2AzYDNgCnTAIAA
+				gQAsDGkAdQCDTxAsMC45ODAzOTIxNTY5IDAuOTgwMzky
+				MTU2OSAwLjk4MDM5MjE1NjkgMC45NQCAD9MAgACBACwM
+				bAB1AINPECcwLjQ1MDk4MDQyNDkgMC40NTA5ODA0MjQ5
+				IDAuNDUwOTgwNDI0OQCAD1RCYWNrVE1lbnVac2l0ZS1z
+				ZXR1cFRsZWZ0U2FsbBAoXmZvbnQtZmFtaWx5LWgx0gB3
+				ACwMdgDJpAFBAUEMeQx5gC+AL4ECh4ECh4ApIkGgAADS
+				AHcALAx+AMmmDH8C3wOUA5QDlAOUgQKJgOaAzYDNgM2A
+				zYAp0wCAAIEALAyHAHUAg08QEjEgMSAxIDAuMTUwMDAw
+				MDA2AIAPEQJY1wOlACwDpgOnA6gDqQOqAFEDrABzAHAM
+				jgBRAFGAAIDTCIECjIAAgADTALEAdwAsDJIMlQC0ogOz
+				A7SA0IDRogK+Ar6A0oDSgBfTAIAAgQAsDJoAdQCDTxAn
+				MC4zNDUwOTgwMzkyIDAuMzQ1MDk4MDM5MiAwLjM0OTAx
+				OTYwNzgAgA9YNjIuNTYzZW1WU2xvZ2Fu1wOlACwDpgOn
 				A6gDqQOqAFEDrABzAHAMogBRAFGAAIDTCIECkYAAgADT
 				ALEAdwAsDKYMqQC0ogOzA7SA0IDRogK+Ar6A0oDSgBfS
 				AHcALAyuAMmkDK8MsAyxDLKBApOBAqOBArOBAsOAKd8Q
@@ -1929,7 +1931,7 @@
 				/hk1EPYQ+QLXEPgLcRDwFhaAYYECK4EDPIEEloEDN4EE
 				l4EDO4EEmIEDNoEDOYD6gQM4gQIvgQMxgQQXrxAPGT4R
 				BwA5GUEAOQA7GUQZRQK+FjYZSBlJC74CvgA7gQSZgQNC
-				gAaBBJqABoAFgQSbgQScgNKBBCSBBJ2BBJ6BAn+A0oAF
+				gAaBBJqABoAFgQSbgQScgNKBBCSBBJ2BBJ6BAoKA0oAF
 				gBdabGluZUhlaWdodFpjdXN0b21TaXplXmxpbmtIb3Zl
 				ckNvbG9y0wCAAIEALBlSAHUAg08QHDAgMC41NDkwMTk2
 				MzQ3IDAuNzI5NDExNzgwOACADyM/+ZmZmZmZmtIAdwAs
@@ -9268,13 +9270,13 @@
 				nlAAe6QAWgBaAFoAWoAJgAmACYAJgA3SAHcALJ5XAHuk
 				AFoAWgBaAFqACYAJgAmACYAN0gB3ACyeXgB7pABaAFoA
 				WgBagAmACYAJgAmADdMAsQB3ACyeZZ5/ALSvEBmeZhDx
-				Al0a1wOznmuebJ5tnm6eb55wnnGecp5znnSedZ52C56e
+				Al0a1wOznmuebJ5tnm6eb55wnnGecp5znnSedZ52C3Ce
 				eJ55nnqee558nn2efoEX14EDMoBxgQTZgNCBF9iBF9mB
-				F9qBF9uBF9yBF92BF96BF9+BF+CBF+GBF+KBF+OBAlyB
+				F9qBF9uBF9yBF92BF96BF9+BF+CBF+GBF+KBF+OBAi6B
 				F+SBF+WBF+aBF+eBF+iBF+mBF+qvEBmegJ6BnoIAOQA7
 				noUCvgK+noieiZ6KADmejJ6NADkAOZ6QnpEAOZ6TEQML
 				yTZMAsCemIEX64EX7YEX74AGgAWBF/CA0oDSgRfxgRfy
-				gRf0gAaBF/WBF/aABoAGgRf3gRf4gAaBF/mBA0CBAoeB
+				gRf0gAaBF/WBF/aABoAGgRf3gRf4gAaBF/mBA0CBAoqB
 				CTuA2YEX+oAXXxAVc2hhcmVfbWVkaWFfd2FyZWhvdXNl
 				WWdhX2FjdGlvblhnYV9sYWJlbFtzaGFyZV9tZWRpYVtn
 				YV9jYXRlZ29yeVpjdXN0b21fdXJsXmZvbnRDb2xvckhv
@@ -9341,13 +9343,13 @@
 				gA3SAHcALJ/FAHukAFoAWgBaAFqACYAJgAmACYAN0gB3
 				ACyfzAB7pABaAFoAWgBagAmACYAJgAmADdMAsQB3ACyf
 				05/tALSvEBmf1BDxAl0a1wOznmuebJ/bn9yf3Z/ennGf
-				4J5zn+KedZ52C56eeJ/nnnqf6Z/qn+uefoEYHIEDMoBx
+				4J5zn+KedZ52C3CeeJ/nnnqf6Z/qn+uefoEYHIEDMoBx
 				gQTZgNCBF9iBF9mBGB2BGB6BGB+BGCCBF96BGCGBF+CB
-				GCKBF+KBF+OBAlyBF+SBGCOBF+aBGCSBGCWBGCaBF+qv
+				GCKBF+KBF+OBAi6BF+SBGCOBF+aBGCSBGCWBGCaBF+qv
 				EBmf7p/vn/AAOQA7noUCvgK+noif956KADmejJ6NADkA
 				OZ6QnpEAOaABEQMLyTZMEPGgBoEYJ4EYKYEYLIAGgAWB
 				F/CA0oDSgRfxgRgtgRf0gAaBF/WBF/aABoAGgRf3gRf4
-				gAaBGC+BA0CBAoeBCTuBAzKBGDCAF18QFXNoYXJlX21l
+				gAaBGC+BA0CBAoqBCTuBAzKBGDCAF18QFXNoYXJlX21l
 				ZGlhX3dhcmVob3VzZVtzaGFyZV9tZWRpYVtnYV9jYXRl
 				Z29yeVpjdXN0b21fdXJsXmZvbnRDb2xvckhvdmVyW2N1
 				c3RvbV9pY29uXWRlZmF1bHRDb2xvcnNeY3VzdG9tX2Nh
@@ -9410,13 +9412,13 @@
 				pABaAFoAWgBagAmACYAJgAmADdIAdwAsoSIAe6QAWgBa
 				AFoAWoAJgAmACYAJgA3SAHcALKEpAHukAFoAWgBaAFqA
 				CYAJgAmACYAN0wCxAHcALKEwoUoAtK8QGaExEPECXRrX
-				A7Oea55soTihOaE6oTuecaE9nnOhP551nnYLnp54oUSe
+				A7Oea55soTihOaE6oTuecaE9nnOhP551nnYLcJ54oUSe
 				eqFGoUehSJ5+gRhSgQMygHGBBNmA0IEX2IEX2YEYU4EY
-				VIEYVYEYVoEX3oEYV4EX4IEYWIEX4oEX44ECXIEX5IEY
+				VIEYVYEYVoEX3oEYV4EX4IEYWIEX4oEX44ECLoEX5IEY
 				WYEX5oEYWoEYW4EYXIEX6q8QGaFLoUyhTQA5ADuehQK+
 				Ar6eiKFUnooAOZ6Mno0AOQA5npChXAA5oV4RAwvJNkwQ
 				8aFjgRhdgRhfgRhigAaABYEX8IDSgNKBF/GBGGOBF/SA
-				BoEX9YEX9oAGgAaBF/eBGGWABoEYZoEDQIECh4EJO4ED
+				BoEX9YEX9oAGgAaBF/eBGGWABoEYZoEDQIECioEJO4ED
 				MoEYZ4AXXxAVc2hhcmVfbWVkaWFfd2FyZWhvdXNlW3No
 				YXJlX21lZGlhW2dhX2NhdGVnb3J5WmN1c3RvbV91cmxe
 				Zm9udENvbG9ySG92ZXJbY3VzdG9tX2ljb25dZGVmYXVs
@@ -9479,13 +9481,13 @@
 				AHukAFoAWgBaAFqACYAJgAmACYAN0gB3ACyihgB7pABa
 				AFoAWgBagAmACYAJgAmADdMAsQB3ACyijaKnALSvEBme
 				ZhDxAl0a1wOznmuebJ5tnm6eb55wnnGecp5znnSedZ52
-				C56eeJ55nnqee558nn2efoEX14EDMoBxgQTZgNCBF9iB
+				C3CeeJ55nnqee558nn2efoEX14EDMoBxgQTZgNCBF9iB
 				F9mBF9qBF9uBF9yBF92BF96BF9+BF+CBF+GBF+KBF+OB
-				AlyBF+SBF+WBF+aBF+eBF+iBF+mBF+qvEBmiqKKpoqoA
+				Ai6BF+SBF+WBF+aBF+eBF+iBF+mBF+qvEBmiqKKpoqoA
 				OQA7noUCvgK+noiisZ6KADmejJ6NADkAOZ6QoVwAOZ6T
 				EQMLyTZMEPGiwIEYiIEYioEYjoAGgAWBF/CA0oDSgRfx
 				gRiPgRf0gAaBF/WBF/aABoAGgRf3gRhlgAaBF/mBA0CB
-				AoeBCTuBAzKBGJGAF9cDpQAsA6YDpwOoA6kDqgBRA6wA
+				AoqBCTuBAzKBGJGAF9cDpQAsA6YDpwOoA6kDqgBRA6wA
 				cwBwosYAUQBRgACA0wiBGImAAIAA0wCxAHcALKLKos0A
 				tKIDswO0gNCA0aICvgK+gNKA0oAX1wOlACwDpgOnA6gD
 				qQOqAFEDrABzAG+i1aLWAFGAAIDTCYEYjIEYi4AAV0Nv
@@ -9829,7 +9831,7 @@
 				gQTigQTjgQNBgQTkgQPJrxAaADmpjgK+qZCpkQMOAr4A
 				ORr0NkyplwvJADmpmgA7EQMa/ameKQapoAA5qaIAOwA7
 				qaUCvoAGgRmOgNKBGZCBGZKBAS6A0oAGgQTrgQk7gRmV
-				gQKHgAaBGZeABYEDQIEE8YEZmIEHQYEZmoAGgRmbgAWA
+				gQKKgAaBGZeABYEDQIEE8YEZmIEHQYEZmoAGgRmbgAWA
 				BYEZnYDSgBdabWVkaXVtTGlua1tzaXplUGVyY2VudF1z
 				bWFsbE1heFdpZHRoXm1lZGl1bU1heFdpZHRoWmxvYWRI
 				ZWlnaHRabG9hZE1vYmlsZV1sYXJnZU1heFdpZHRo1wOl
@@ -10094,7 +10096,7 @@
 				gRpRgQM7gQThgQTigQTjgQNBgQTkgQPJrxAaADmvBwK+
 				qZCvCgMTAr4AORr0NkyvEAvJADkDDgA7EQMa/a8XKQav
 				GQA5qaIAOQA7rx4CvoAGgRpSgNKBGZCBGlSBATCA0oAG
-				gQTrgQk7gRpXgQKHgAaBAS6ABYEDQIEE8YEaWYEHQYEa
+				gQTrgQk7gRpXgQKKgAaBAS6ABYEDQIEE8YEaWYEHQYEa
 				W4AGgRmbgAaABYEaXIDSgBdabWVkaXVtTGlua1tzaXpl
 				UGVyY2VudF1zbWFsbE1heFdpZHRoXm1lZGl1bU1heFdp
 				ZHRoWmxvYWRIZWlnaHRabG9hZE1vYmlsZV1sYXJnZU1h
@@ -10291,7 +10293,7 @@
 				AzmBBN+BGuGBAzuBBOGBBOKBBOOBA0GBBOSBA8mvEBoA
 				ObMYAr6pkLMbAxMCvgA5GvQ2TLMhC8kAOQMOADsRAxr9
 				sygpBrMqADmpogA5ADuzLwK+gAaBGuKA0oEZkIEa5IEB
-				MIDSgAaBBOuBCTuBGueBAoeABoEBLoAFgQNAgQTxgRrp
+				MIDSgAaBBOuBCTuBGueBAoqABoEBLoAFgQNAgQTxgRrp
 				gQdBgRrrgAaBGZuABoAFgRrsgNKAF1ptZWRpdW1MaW5r
 				W3NpemVQZXJjZW50XXNtYWxsTWF4V2lkdGhebWVkaXVt
 				TWF4V2lkdGhabG9hZEhlaWdodFpsb2FkTW9iaWxlXWxh
@@ -10363,7 +10365,7 @@
 				L4EDOYEE34EbFYEDO4EE4YEE4oEE44EDQYEE5IEDya8Q
 				GgA5tIYCvqmQtIkDEwK+ADka9DZMtI8LyQA5Aw4AOxED
 				Gv20likGtJgAOamiADkAO7SdAr6ABoEbFoDSgRmQgRsY
-				gQEwgNKABoEE64EJO4EbG4ECh4AGgQEugAWBA0CBBPGB
+				gQEwgNKABoEE64EJO4EbG4ECioAGgQEugAWBA0CBBPGB
 				Gx2BB0GBGx+ABoEZm4AGgAWBGyCA0oAXWm1lZGl1bUxp
 				bmtbc2l6ZVBlcmNlbnRdc21hbGxNYXhXaWR0aF5tZWRp
 				dW1NYXhXaWR0aFpsb2FkSGVpZ2h0WmxvYWRNb2JpbGVd
@@ -10435,7 +10437,7 @@
 				R4EbSIECL4EDOYEE34EbSYEDO4EE4YEE4oEE44EDQYEE
 				5IEDya8QGgA5tfQCvqmQtfcDEwK+ADka9DZMtf0LyQA5
 				Aw4AOxEDGv22BCkGtgYAOamiADkAO7YLAr6ABoEbSoDS
-				gRmQgRtMgQEwgNKABoEE64EJO4EbT4ECh4AGgQEugAWB
+				gRmQgRtMgQEwgNKABoEE64EJO4EbT4ECioAGgQEugAWB
 				A0CBBPGBG1GBB0GBG1OABoEZm4AGgAWBG1SA0oAXWm1l
 				ZGl1bUxpbmtbc2l6ZVBlcmNlbnRdc21hbGxNYXhXaWR0
 				aF5tZWRpdW1NYXhXaWR0aFpsb2FkSGVpZ2h0WmxvYWRN
@@ -11162,37 +11164,37 @@
 				AJanAACWqgAAlq0AAJawAACWswAAlrYAAJa5AACWvAAA
 				lr8AAJbCAACWxQAAlsgAAJbLAACWzgAAltEAAJbUAACW
 				1wAAltoAAJbdAACW4AAAluMAAJbmAACW6QAAluwAAJbv
-				AACXXgAAl2EAAJdkAACXZgAAl2kAAJdsAACXbgAAl3EA
-				AJd0AACXdgAAl3gAAJd6AACXfAAAl38AAJeBAACXgwAA
-				l4YAAJeIAACXigAAl4wAAJePAACXkgAAl5QAAJeXAACX
-				mQAAl5wAAJefAACXogAAl6UAAJeoAACXqwAAl64AAJew
-				AACXswAAl7UAAJe4AACXuwAAl70AAJe/AACXwQAAl8QA
-				AJfHAACXygAAl8wAAJfOAACX0AAAl9MAAJfWAACX2AAA
-				l9oAAJfcAACX3gAAl+EAAJfkAACX5gAAl+gAAJfxAACX
-				9wAAmAMAAJgOAACYGgAAmCAAAJgqAACYNQAAmD4AAJhH
-				AACYUAAAmFUAAJheAACYawAAmHEAAJh8AACYhAAAmIkA
-				AJiRAACYlgAAmKEAAJisAACYtAAAmL4AAJjQAACY3AAA
-				mOYAAJjwAACY9gAAmQQAAJkPAACZGQAAmSMAAJkqAACZ
-				NgAAmUIAAJlRAACZXAAAmW8AAJl6AACZhAAAmZIAAJma
-				AACZpwAAmbIAAJm5AACZzAAAmd4AAJnqAACZ/QAAmgYA
+				AACXXgAAl2EAAJdkAACXZgAAl2kAAJdsAACXbwAAl3IA
+				AJd1AACXdwAAl3kAAJd7AACXfQAAl4AAAJeCAACXhAAA
+				l4cAAJeJAACXiwAAl40AAJeQAACXkwAAl5UAAJeYAACX
+				mgAAl50AAJegAACXowAAl6YAAJepAACXrAAAl68AAJex
+				AACXtAAAl7YAAJe5AACXvAAAl74AAJfAAACXwgAAl8UA
+				AJfIAACXywAAl80AAJfPAACX0QAAl9QAAJfXAACX2QAA
+				l9sAAJfdAACX3wAAl+EAAJfkAACX5gAAl+gAAJfxAACX
+				9wAAmAMAAJgOAACYFwAAmB0AAJgnAACYMgAAmDsAAJhE
+				AACYTQAAmFIAAJhbAACYaAAAmG4AAJh5AACYgQAAmIYA
+				AJiOAACYkwAAmJ4AAJipAACYsQAAmLsAAJjNAACY2QAA
+				mOMAAJjtAACY8wAAmQEAAJkMAACZFgAAmSAAAJknAACZ
+				MwAAmT8AAJlOAACZWQAAmWwAAJl3AACZgQAAmY8AAJmX
+				AACZpAAAma8AAJm2AACZyQAAmdsAAJnnAACZ8wAAmgYA
 				AJoQAACaIgAAmjUAAJo7AACaSAAAmlUAAJpYAACaWwAA
 				ml4AAJphAACaZAAAmmcAAJp0AACadwAAmnoAAJp8AACa
 				fwAAmoIAAJqFAACahwAAmowAAJqPAACalQAAmpoAAJqj
 				AACaqAAAmrIAAJq9AACavwAAmsEAAJrGAACa0wAAmt4A
-				AJrgAACa5gAAmwMAAJsFAACbBwAAmwgAAJsLAACbDQAA
-				mw8AAJscAACbIQAAmyMAAJslAACbKgAAmywAAJsuAACb
-				MAAAmzUAAJtAAACbSQAAm04AAJtRAACbVAAAm1YAAJtY
-				AACbWwAAm2QAAJtxAACbdAAAm3cAAJt5AACbewAAm30A
-				AJt/AACbgQAAm44AAJuaAACbnAAAm7EAAJvcAACcBgAA
-				nAkAAJwLAACcFAAAnCEAAJwkAACcJwAAnCkAAJwrAACc
-				LQAAnC8AAJwxAACcPgAAnG0AAJxvAACcfAAAnKYAAJyo
-				AACcrQAAnLIAAJy9AACcwgAAnMYAAJzIAACc1wAAnOAA
-				AJzpAACc6wAAnO0AAJzwAACc8wAAnPUAAJz6AACdAwAA
-				nRAAAJ0TAACdFQAAnRcAAJ0ZAACdGwAAnR0AAJ0fAACd
-				LAAAnUEAAJ1DAACdRgAAnWMAAJ1lAACdZwAAnWgAAJ1r
-				AACdbQAAnW8AAJ18AACdgQAAnYMAAJ2FAACdigAAnYwA
-				AJ2OAACdkAAAnZ0AAJ3HAACdyQAAndIAAJ3ZAACd4gAA
-				necAAJ3qAACd7QAAne8AAJ34AACeAQAAnh4AAJ4gAACe
+				AJrgAACa6QAAmu4AAJrxAACa9AAAmvYAAJr/AACbCAAA
+				mw4AAJsrAACbLQAAmy8AAJswAACbMwAAmzUAAJs3AACb
+				RAAAm0kAAJtLAACbTQAAm1IAAJtUAACbVgAAm1gAAJtd
+				AACbaAAAm3EAAJt2AACbeQAAm3wAAJt+AACbgAAAm4MA
+				AJuMAACbmQAAm5wAAJufAACboQAAm6MAAJulAACbpwAA
+				m6kAAJu2AACbwgAAm8QAAJvZAACcBAAAnC4AAJwxAACc
+				MwAAnDwAAJxJAACcTAAAnE8AAJxRAACcUwAAnFUAAJxX
+				AACcWQAAnGYAAJyVAACclwAAnKQAAJzOAACc0AAAnNUA
+				AJzaAACc5QAAnOoAAJzuAACc8AAAnP8AAJ0IAACdEQAA
+				nRMAAJ0VAACdGAAAnRsAAJ0dAACdIgAAnSsAAJ04AACd
+				OwAAnT0AAJ0/AACdQQAAnUMAAJ1FAACdRwAAnVQAAJ1p
+				AACdawAAnW4AAJ2LAACdjQAAnY8AAJ2QAACdkwAAnZUA
+				AJ2XAACdpAAAnakAAJ2rAACdrQAAnbIAAJ20AACdtgAA
+				nbgAAJ3FAACd7wAAnfEAAJ36AACeAQAAnh4AAJ4gAACe
 				IgAAniMAAJ4mAACeKAAAnioAAJ43AACePAAAnj4AAJ5A
 				AACeRQAAnkcAAJ5JAACeSwAAnlQAAJ5dAACeYAAAnmMA
 				AJ5mAACeaQAAnmsAAJ9KAACfSwAAn00AAJ9QAACfUwAA
