--- a/vermontcomplexsystems-foundation.rw8/Pages/12-Archive/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/12-Archive/Data/Contents.plist
@@ -13,9 +13,10 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
 					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
 					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
 					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
 					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
@@ -42,6 +43,7 @@
 					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
 					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>C3045290-9DD8-4285-B611-D18187DC7F54.png</string>
 					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
@@ -52,10 +54,10 @@
 					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
 					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
 					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
-					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
+					<string>DCBB782F-34F6-4B68-9D92-6FCEDA3FBE69.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #134136F6A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
