--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/1-Archives/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/1-Archives/Data/Contents.plist
@@ -13,9 +13,10 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
 					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
 					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
 					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
 					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
@@ -42,6 +43,7 @@
 					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
 					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>C3045290-9DD8-4285-B611-D18187DC7F54.png</string>
 					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
@@ -52,10 +54,10 @@
 					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
 					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
 					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
-					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
+					<string>DCBB782F-34F6-4B68-9D92-6FCEDA3FBE69.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #134136F6A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
@@ -104,9 +106,9 @@
 				DVwNXQ1eDV8NYA1hDWINYw1kDWUNZg1nDWgNaQ1qDWsN
 				bA1tDW4Nbw1wDXENcg1zDXQNdQ12DXcNeA15DXoNew18
 				DX0Nfg1/DYANgQ2CDYMNhA2UDZUNlg2XDZgNmQ2aDZsN
-				nA2dDZ4Nnw2iDaMNqg2yDbMNtA25DboNuw3EDccNzA3V
-				DdgN2w3cDd0N3g3fDeAN4Q3iDekN6g3zDfYN9w3+DgYO
-				CQ4KDgsOEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
+				nA2dDZ4Nnw2iDacNqA2pDaoNsQ25DboNuw3ADcENwg3L
+				Dc4N0w3cDd8N4g3jDeQN5Q3mDecN6A3pDfAN8Q36Df0N
+				/g4FDg0OEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
 				Dn0OhA6LDpIOmQ6dDqAOoQ7ZDtwO3Q7eDuMO5g7tDvMO
 				9g79DwQPCw8SDxYPGQ8aD1IPVQ9WD1cPXA9fD2YPbA9v
 				D3YPfQ+ED4sPjw+SD5MPwg/FD8YPxw/MD88P1g/cD98P
@@ -1501,61 +1503,61 @@
 				iIECiYEBfoECioECi4ECjIECjYECjoECj4ECkIECkYEB
 				fIECkoECk4EClIEClYECloECl4ECmIECmYECmoECm4EC
 				nIECnYECnoECn4ECoIECoYECooECo4ECpIECpYECpoEC
-				p4ECqIECqa8QNg0bDRwAOQ0eDR8AOQ0hDSIAOwA7AskA
+				p4ECqIECqa8QNg0bDRwAOQ0eDR8NIA0hDSIAOwA7AskA
 				Ug0nApwAOw0qADkAOQK4DS4NLwFADTEAOw0zDTQNNQ02
 				DTcNOA05ADkNOwA7DT0NPgA5ADkAOQ1CDUMNRAA7ADkA
-				OQ1IDUkAOwA5AFoAOQ1ODU8AO4ECqoECq4AGgQKsgQK4
-				gAaBArmBArqABYAFgPKAC4ECvIC3gAWBAr2ABoAGgNOB
-				Ar6BAsCAL4ECwYAFgQLEgQLHgQLIgQLJgQLKgQLLgQLM
-				gAaBAs2ABYECzoEC0IAGgAaABoEC0oEC04EC1YAFgAaA
-				BoEC1oEC14AFgAaACYAGgQLYgQLbgAWAGVhtZW51Rm9u
-				dFtmaXhlZFNoYWRvd1poYWxmSGVpZ2h0W3pvbmVEaXZp
-				ZGVyWWxvZ29MYXJnZVpzaG93UGFyZW50WHNob3dMb2dv
-				WHRpdGxlVGFnVHpvbmVYcG9zaXRpb25cbWF0Y2hQYWRk
-				aW5nVXRpdGxlWnNob3dTbG9nYW5XZGl2aWRlclRzaG93
-				V3BhZGRpbmdac2hhZG93Qmx1clpob3ZlckNvbG9yV2lz
-				SG92ZXJZYmFzZUNvbG9yXxAPbW9iaWxlQmFja0xhYmVs
-				W21vYmlsZUxhYmVsWXRpdGxlQXJlYVl6b25lQWxpZ25d
-				c2hhZG93T3BhY2l0eVpzdGlja3lMb2dvWXRpdGxlRm9u
-				dFlzaG93VGl0bGVWaGVpZ2h0W2FjdGl2ZUNvbG9yW3N0
-				eWxlQWN0aXZlXmhpZGVMb2dvTW9iaWxlWnN0aWNreUhp
-				ZGVfEBBicmVha3BvaW50Q3VzdG9tWmxvZ29NZWRpdW1Z
-				dGV4dENvbG9yXWZ1bGxXaWR0aE1lbnVXY29udGFpblxj
-				dXN0b21TaXppbmdaYnJlYWtwb2ludFZzbG9nYW5fEBBo
-				aWRlU2xvZ2FuTW9iaWxlXxAPY29sbGFwc2VIZWFkaW5n
-				W2ZpeGVkT2Zmc2V0XxAQc3VibWVudUluZGljYXRvclhm
-				b250U2l6ZVlsb2dvU21hbGxfEA9oaWRlVGl0bGVNb2Jp
+				OQ1IDUkAOwA5ADkAWgA5DU8AO4ECqoECq4AGgQKsgQK4
+				gQK5gQK8gQK9gAWABYDygAuBAr+At4AFgQLAgAaABoDT
+				gQLBgQLDgC+BAsSABYECx4ECyoECy4ECzIECzYECzoEC
+				z4AGgQLQgAWBAtGBAtOABoAGgAaBAtWBAtaBAtiABYAG
+				gAaBAtmBAtqABYAGgAaACYAGgQLbgAWAGVhtZW51Rm9u
+				dFtmaXhlZFNoYWRvd1poYWxmSGVpZ2h0WGZvbnRTaXpl
+				WWxvZ29MYXJnZVpzaG93UGFyZW50WHNob3dMb2dvWHRp
+				dGxlVGFnVHpvbmVYcG9zaXRpb25cbWF0Y2hQYWRkaW5n
+				VXRpdGxlWnNob3dTbG9nYW5XZGl2aWRlclRzaG93V3Bh
+				ZGRpbmdac2hhZG93Qmx1clpob3ZlckNvbG9yV2lzSG92
+				ZXJZYmFzZUNvbG9yXxAPbW9iaWxlQmFja0xhYmVsW21v
+				YmlsZUxhYmVsWXRpdGxlQXJlYVl6b25lQWxpZ25dc2hh
+				ZG93T3BhY2l0eVpzdGlja3lMb2dvWXRpdGxlRm9udFlz
+				aG93VGl0bGVWaGVpZ2h0W2FjdGl2ZUNvbG9yW3N0eWxl
+				QWN0aXZlXmhpZGVMb2dvTW9iaWxlWnN0aWNreUhpZGVf
+				EBBicmVha3BvaW50Q3VzdG9tWmxvZ29NZWRpdW1ZdGV4
+				dENvbG9yXWZ1bGxXaWR0aE1lbnVXY29udGFpblxjdXN0
+				b21TaXppbmdaYnJlYWtwb2ludFZzbG9nYW5fEBBoaWRl
+				U2xvZ2FuTW9iaWxlXxAPY29sbGFwc2VIZWFkaW5nW3pv
+				bmVEaXZpZGVyW2ZpeGVkT2Zmc2V0XxAQc3VibWVudUlu
+				ZGljYXRvcllsb2dvU21hbGxfEA9oaWRlVGl0bGVNb2Jp
 				bGVfEBBmb250LWZhbWlseS10ZXh0VXNvbGlk0wC1AHcA
 				LA2FDYwAuKYNhg2HDYgNiQ2KDYuBAq2BAq6BAq+BArCB
 				ArGBArKmDY0NjgA7DZANkQ2SgQKzgQK0gAWBArWBAraB
 				AreAGVRhcmcxUmlkVXJvdW5kVGFyZzJYb3BlcmF0b3JU
 				dHlwZVloZWlnaHRbMF1aaGFsZkhlaWdodBACUS9UbWF0
-				aNMAgACBACwNoAB1AINKMCAwIDAgMC40AIAPVXJpZ2h0
-				1wOfACwDoAOhA6IDowOkAFEDpgBzAHANpwBRAFGAAIDU
-				CIECu4AAgADTALUAdwAsDasNrgC4ogOtA66A0YDSogK4
-				AriA04DTgBlUaGlkZVpTaXRlIFRpdGxl0gB3ACwNtQDE
-				og22DbaBAr+BAr+AKhAPUnJ30gB3ACwNvADEpg29Db4D
-				jgOOA44DjoECwoECw4DOgM6AzoDOgCrTAIAAgQAsDcUA
-				dQCDSzAgMCAwIDAuMTUAgA/VBTkAgACBBToALA3IDckA
-				dQU9AINPECgwLjk4MDM5MjE1NjkgMC45ODAzOTIxNTY5
-				IDAuOTgwMzkyMTU2OSAxTxAnMC45NzUyOTYyNTg5IDAu
-				OTc1Mjk2MjU4OSAwLjk3NTI5NjI1ODkAgQE5gA/SAHcA
-				LA3NAMSmDc4NzwOOA44DjgOOgQLFgQLGgM6AzoDOgM6A
-				KtMAgACBACwN1gB1AINPECwwLjk4MDM5MjE1NjkgMC45
-				ODAzOTIxNTY5IDAuOTgwMzkyMTU2OSAwLjk1AIAP0wCA
-				AIEALA3ZAHUAg08QJzAuNDUwOTgwNDI0OSAwLjQ1MDk4
-				MDQyNDkgMC40NTA5ODA0MjQ5AIAPVEJhY2tUTWVudVpz
-				aXRlLXNldHVwVGxlZnRTYWxsECheZm9udC1mYW1pbHkt
-				aDHSAHcALA3jAMSkATsBOw3mDeaAMIAwgQLPgQLPgCoi
-				QaAAANIAdwAsDesAxKYN7ALZA44DjgOOA46BAtGA54DO
-				gM6AzoDOgCrTAIAAgQAsDfQAdQCDTxASMSAxIDEgMC4x
-				NTAwMDAwMDYAgA8RAljXA58ALAOgA6EDogOjA6QAUQOm
-				AHMAcA37AFEAUYAAgNQIgQLUgACAANMAtQB3ACwN/w4C
-				ALiiA60DroDRgNKiArgCuIDTgNOAGdMAgACBACwOBwB1
-				AINPECcwLjM0NTA5ODAzOTIgMC4zNDUwOTgwMzkyIDAu
-				MzQ5MDE5NjA3OACAD1g2Mi41NjNlbVZTbG9nYW7SAHcA
-				LA4MAMSiDg0ODoEC2YEC2oAqIz/qAAAAAAAAIz/xAAAA
-				AAAA1wOfACwDoAOhA6IDowOkAFEDpgBzAHAOFgBRAFGA
+				aNMAgACBACwNoAB1AINKMCAwIDAgMC40AIAP0gB3ACwN
+				owDEog2kDaWBArqBAruAKiM/6gAAAAAAACM/8QAAAAAA
+				AFVyaWdodNcDnwAsA6ADoQOiA6MDpABRA6YAcwBwDa4A
+				UQBRgACA1AiBAr6AAIAA0wC1AHcALA2yDbUAuKIDrQOu
+				gNGA0qICuAK4gNOA04AZVGhpZGVaU2l0ZSBUaXRsZdIA
+				dwAsDbwAxKINvQ29gQLCgQLCgCoQD1Jyd9IAdwAsDcMA
+				xKYNxA3FA44DjgOOA46BAsWBAsaAzoDOgM6AzoAq0wCA
+				AIEALA3MAHUAg0swIDAgMCAwLjE1AIAP1QU5AIAAgQU6
+				ACwNzw3QAHUFPQCDTxAoMC45ODAzOTIxNTY5IDAuOTgw
+				MzkyMTU2OSAwLjk4MDM5MjE1NjkgMU8QJzAuOTc1Mjk2
+				MjU4OSAwLjk3NTI5NjI1ODkgMC45NzUyOTYyNTg5AIEB
+				OYAP0gB3ACwN1ADEpg3VDdYDjgOOA44DjoECyIECyYDO
+				gM6AzoDOgCrTAIAAgQAsDd0AdQCDTxAsMC45ODAzOTIx
+				NTY5IDAuOTgwMzkyMTU2OSAwLjk4MDM5MjE1NjkgMC45
+				NQCAD9MAgACBACwN4AB1AINPECcwLjQ1MDk4MDQyNDkg
+				MC40NTA5ODA0MjQ5IDAuNDUwOTgwNDI0OQCAD1RCYWNr
+				VE1lbnVac2l0ZS1zZXR1cFRsZWZ0U2FsbBAoXmZvbnQt
+				ZmFtaWx5LWgx0gB3ACwN6gDEpAE7ATsN7Q3tgDCAMIEC
+				0oEC0oAqIkGgAADSAHcALA3yAMSmDfMC2QOOA44DjgOO
+				gQLUgOeAzoDOgM6AzoAq0wCAAIEALA37AHUAg08QEjEg
+				MSAxIDAuMTUwMDAwMDA2AIAPEQJY1wOfACwDoAOhA6ID
+				owOkAFEDpgBzAHAOAgBRAFGAAIDUCIEC14AAgADTALUA
+				dwAsDgYOCQC4ogOtA66A0YDSogK4AriA04DTgBnTAIAA
+				gQAsDg4AdQCDTxAnMC4zNDUwOTgwMzkyIDAuMzQ1MDk4
+				MDM5MiAwLjM0OTAxOTYwNzgAgA9YNjIuNTYzZW1WU2xv
+				Z2Fu1wOfACwDoAOhA6IDowOkAFEDpgBzAHAOFgBRAFGA
 				AIDUCIEC3IAAgADTALUAdwAsDhoOHQC4ogOtA66A0YDS
 				ogK4AriA04DTgBnSAHcALA4iAMSkDiMOJA4lDiaBAt6B
 				Au6BAv6BAw6AKt8QNwWEABEAKgWFAC4AIAApADAFhgAh
@@ -2192,7 +2194,7 @@
 				YoEBeoEDh4EE2IEDg4EE2YEDhoEE2oEDgoEDhID7gQGC
 				gQGBgQN9gQRZrxAPGpcSfgA5GpoAOQA7Gp0angK4F48a
 				oRqiDTcCuAA7gQTbgQOMgAaBBNyABoAFgQTdgQTegNOB
-				BGaBBN+BBOCBAsqA04AFgBlabGluZUhlaWdodFpjdXN0
+				BGaBBN+BBOCBAs2A04AFgBlabGluZUhlaWdodFpjdXN0
 				b21TaXplXmxpbmtIb3ZlckNvbG9y0wCAAIEALBqrAHUA
 				g08QHDAgMC41NDkwMTk2MzQ3IDAuNzI5NDExNzgwOACA
 				DyM/+ZmZmZmZmtIAdwAsGq8AxKEAOYAGgCrTAIAAgQAs
@@ -11978,36 +11980,36 @@
 				wgAAucUAALnIAAC5ywAAuc4AALnRAAC51AAAudcAALna
 				AAC53QAAueAAALnjAAC55gAAuekAALnsAAC57wAAufIA
 				ALn1AAC5+AAAufsAALn+AAC6AQAAugQAALoHAAC6CgAA
-				unkAALp8AAC6fwAAuoEAALqEAAC6hwAAuokAALqMAAC6
-				jwAAupEAALqTAAC6lQAAupcAALqaAAC6nAAAup4AALqh
-				AAC6owAAuqUAALqnAAC6qgAAuq0AALqvAAC6sgAAurQA
-				ALq3AAC6ugAAur0AALrAAAC6wwAAusYAALrJAAC6ywAA
-				us4AALrQAAC60wAAutYAALrYAAC62gAAutwAALrfAAC6
-				4gAAuuUAALrnAAC66QAAuusAALruAAC68QAAuvMAALr1
-				AAC69wAAuvkAALr8AAC6/wAAuwEAALsDAAC7DAAAuxgA
-				ALsjAAC7LwAAuzkAALtEAAC7TQAAu1YAALtbAAC7ZAAA
-				u3EAALt3AAC7ggAAu4oAALuPAAC7lwAAu6IAALutAAC7
-				tQAAu78AALvRAAC73QAAu+cAALvxAAC7/wAAvAoAALwU
-				AAC8HgAAvCUAALwxAAC8PQAAvEwAALxXAAC8agAAvHUA
-				ALx/AAC8jQAAvJUAALyiAAC8rQAAvLQAALzHAAC82QAA
-				vOUAALz4AAC9AQAAvQsAAL0dAAC9MAAAvTYAAL1DAAC9
+				unkAALp8AAC6fwAAuoEAALqEAAC6hwAAuooAALqNAAC6
+				kAAAupIAALqUAAC6lgAAupgAALqbAAC6nQAAup8AALqi
+				AAC6pAAAuqYAALqoAAC6qwAAuq4AALqwAAC6swAAurUA
+				ALq4AAC6uwAAur4AALrBAAC6xAAAuscAALrKAAC6zAAA
+				us8AALrRAAC61AAAutcAALrZAAC62wAAut0AALrgAAC6
+				4wAAuuYAALroAAC66gAAuuwAALrvAAC68gAAuvQAALr2
+				AAC6+AAAuvoAALr8AAC6/wAAuwEAALsDAAC7DAAAuxgA
+				ALsjAAC7LAAAuzYAALtBAAC7SgAAu1MAALtYAAC7YQAA
+				u24AALt0AAC7fwAAu4cAALuMAAC7lAAAu58AALuqAAC7
+				sgAAu7wAALvOAAC72gAAu+QAALvuAAC7/AAAvAcAALwR
+				AAC8GwAAvCIAALwuAAC8OgAAvEkAALxUAAC8ZwAAvHIA
+				ALx8AAC8igAAvJIAALyfAAC8qgAAvLEAALzEAAC81gAA
+				vOIAALzuAAC9AQAAvQsAAL0dAAC9MAAAvTYAAL1DAAC9
 				UAAAvVMAAL1WAAC9WQAAvVwAAL1fAAC9YgAAvW8AAL1y
 				AAC9dQAAvXcAAL16AAC9fQAAvYAAAL2CAAC9hwAAvYoA
 				AL2QAAC9lQAAvZ4AAL2jAAC9rQAAvbgAAL26AAC9vAAA
-				vcEAAL3OAAC92QAAvdsAAL3hAAC9/gAAvgAAAL4CAAC+
-				AwAAvgYAAL4IAAC+CgAAvhcAAL4cAAC+HgAAviAAAL4l
-				AAC+JwAAvikAAL4rAAC+MAAAvjsAAL5EAAC+SQAAvkwA
-				AL5PAAC+UQAAvlMAAL5WAAC+XwAAvmwAAL5vAAC+cgAA
-				vnQAAL52AAC+eAAAvnoAAL58AAC+iQAAvpUAAL6XAAC+
-				rAAAvtcAAL8BAAC/BAAAvwYAAL8PAAC/HAAAvx8AAL8i
-				AAC/JAAAvyYAAL8oAAC/KgAAvywAAL85AAC/aAAAv2oA
-				AL93AAC/oQAAv6MAAL+oAAC/rQAAv7gAAL+9AAC/wQAA
-				v8MAAL/SAAC/2wAAv+QAAL/mAAC/6AAAv+sAAL/uAAC/
-				8AAAv/UAAL/+AADACwAAwA4AAMAQAADAEgAAwBQAAMAW
-				AADAGAAAwBoAAMAnAADAPAAAwD4AAMBBAADAXgAAwGAA
-				AMBiAADAYwAAwGYAAMBoAADAagAAwHcAAMB8AADAfgAA
-				wIAAAMCFAADAhwAAwIkAAMCLAADAmAAAwMIAAMDEAADA
-				zQAAwNQAAMDdAADA4gAAwOUAAMDoAADA6gAAwPMAAMD8
+				vcEAAL3OAAC92QAAvdsAAL3kAAC96QAAvewAAL3vAAC9
+				8QAAvfoAAL4DAAC+CQAAviYAAL4oAAC+KgAAvisAAL4u
+				AAC+MAAAvjIAAL4/AAC+RAAAvkYAAL5IAAC+TQAAvk8A
+				AL5RAAC+UwAAvlgAAL5jAAC+bAAAvnEAAL50AAC+dwAA
+				vnkAAL57AAC+fgAAvocAAL6UAAC+lwAAvpoAAL6cAAC+
+				ngAAvqAAAL6iAAC+pAAAvrEAAL69AAC+vwAAvtQAAL7/
+				AAC/KQAAvywAAL8uAAC/NwAAv0QAAL9HAAC/SgAAv0wA
+				AL9OAAC/UAAAv1IAAL9UAAC/YQAAv5AAAL+SAAC/nwAA
+				v8kAAL/LAAC/0AAAv9UAAL/gAAC/5QAAv+kAAL/rAAC/
+				+gAAwAMAAMAMAADADgAAwBAAAMATAADAFgAAwBgAAMAd
+				AADAJgAAwDMAAMA2AADAOAAAwDoAAMA8AADAPgAAwEAA
+				AMBCAADATwAAwGQAAMBmAADAaQAAwIYAAMCIAADAigAA
+				wIsAAMCOAADAkAAAwJIAAMCfAADApAAAwKYAAMCoAADA
+				rQAAwK8AAMCxAADAswAAwMAAAMDqAADA7AAAwPUAAMD8
 				AADBGQAAwRsAAMEdAADBHgAAwSEAAMEjAADBJQAAwTIA
 				AME3AADBOQAAwTsAAMFAAADBQgAAwUQAAMFGAADBTwAA
 				wVgAAMFbAADBXgAAwWEAAMFkAADBZgAAwkUAAMJGAADC
