--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/4-Mentors/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/1-CNWW-Virtual/ChildPages/4-Mentors/Data/Contents.plist
@@ -13,9 +13,10 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
 					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
 					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
 					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
 					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
@@ -42,6 +43,7 @@
 					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
 					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>C3045290-9DD8-4285-B611-D18187DC7F54.png</string>
 					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
@@ -52,10 +54,10 @@
 					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
 					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
 					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
-					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
+					<string>DCBB782F-34F6-4B68-9D92-6FCEDA3FBE69.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #134136F6A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
@@ -104,9 +106,9 @@
 				DVwNXQ1eDV8NYA1hDWINYw1kDWUNZg1nDWgNaQ1qDWsN
 				bA1tDW4Nbw1wDXENcg1zDXQNdQ12DXcNeA15DXoNew18
 				DX0Nfg1/DYANgQ2CDYMNhA2UDZUNlg2XDZgNmQ2aDZsN
-				nA2dDZ4Nnw2iDaMNqg2yDbMNtA25DboNuw3EDccNzA3V
-				DdgN2w3cDd0N3g3fDeAN4Q3iDekN6g3zDfYN9w3+DgYO
-				CQ4KDgsOEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
+				nA2dDZ4Nnw2iDacNqA2pDaoNsQ25DboNuw3ADcENwg3L
+				Dc4N0w3cDd8N4g3jDeQN5Q3mDecN6A3pDfAN8Q36Df0N
+				/g4FDg0OEA4RDhIOGQ4hDigOYA5jDmQOZQ5qDm0OdA56
 				Dn0OhA6LDpIOmQ6dDqAOoQ7ZDtwO3Q7eDuMO5g7tDvMO
 				9g79DwQPCw8SDxYPGQ8aD1IPVQ9WD1cPXA9fD2YPbA9v
 				D3YPfQ+ED4sPjw+SD5MPwg/FD8YPxw/MD88P1g/cD98P
@@ -1353,60 +1355,60 @@
 				gQF+gQKKgQKLgQKMgQKNgQKOgQKPgQKQgQKRgQF8gQKS
 				gQKTgQKUgQKVgQKWgQKXgQKYgQKZgQKagQKbgQKcgQKd
 				gQKegQKfgQKggQKhgQKigQKjgQKkgQKlgQKmgQKngQKo
-				gQKprxA2DRsNHAA5DR4NHwA5DSENIgA7ADsCyQBSDScC
+				gQKprxA2DRsNHAA5DR4NHw0gDSENIgA7ADsCyQBSDScC
 				nAA7DSoAOQA5ArgNLg0vAUANMQA7DTMNNA01DTYNNw04
 				DTkAOQ07ADsNPQ0+ADkAOQA5DUINQw1EADsAOQA5DUgN
-				SQA7ADkAWgA5DU4NTwA7gQKqgQKrgAaBAqyBAriABoEC
-				uYECuoAFgAWA8oALgQK8gLeABYECvYAGgAaA04ECvoEC
-				wIAvgQLBgAWBAsSBAseBAsiBAsmBAsqBAsuBAsyABoEC
-				zYAFgQLOgQLQgAaABoAGgQLSgQLTgQLVgAWABoAGgQLW
-				gQLXgAWABoAJgAaBAtiBAtuABYAZWG1lbnVGb250W2Zp
-				eGVkU2hhZG93WmhhbGZIZWlnaHRbem9uZURpdmlkZXJZ
-				bG9nb0xhcmdlWnNob3dQYXJlbnRYc2hvd0xvZ29YdGl0
-				bGVUYWdUem9uZVhwb3NpdGlvblxtYXRjaFBhZGRpbmdV
-				dGl0bGVac2hvd1Nsb2dhbldkaXZpZGVyVHNob3dXcGFk
-				ZGluZ1pzaGFkb3dCbHVyWmhvdmVyQ29sb3JXaXNIb3Zl
-				clliYXNlQ29sb3JfEA9tb2JpbGVCYWNrTGFiZWxbbW9i
-				aWxlTGFiZWxZdGl0bGVBcmVhWXpvbmVBbGlnbl1zaGFk
-				b3dPcGFjaXR5WnN0aWNreUxvZ29ZdGl0bGVGb250WXNo
-				b3dUaXRsZVZoZWlnaHRbYWN0aXZlQ29sb3Jbc3R5bGVB
-				Y3RpdmVeaGlkZUxvZ29Nb2JpbGVac3RpY2t5SGlkZV8Q
-				EGJyZWFrcG9pbnRDdXN0b21abG9nb01lZGl1bVl0ZXh0
-				Q29sb3JdZnVsbFdpZHRoTWVudVdjb250YWluXGN1c3Rv
-				bVNpemluZ1picmVha3BvaW50VnNsb2dhbl8QEGhpZGVT
-				bG9nYW5Nb2JpbGVfEA9jb2xsYXBzZUhlYWRpbmdbZml4
-				ZWRPZmZzZXRfEBBzdWJtZW51SW5kaWNhdG9yWGZvbnRT
-				aXplWWxvZ29TbWFsbF8QD2hpZGVUaXRsZU1vYmlsZV8Q
+				SQA7ADkAOQBaADkNTwA7gQKqgQKrgAaBAqyBAriBArmB
+				AryBAr2ABYAFgPKAC4ECv4C3gAWBAsCABoAGgNOBAsGB
+				AsOAL4ECxIAFgQLHgQLKgQLLgQLMgQLNgQLOgQLPgAaB
+				AtCABYEC0YEC04AGgAaABoEC1YEC1oEC2IAFgAaABoEC
+				2YEC2oAFgAaABoAJgAaBAtuABYAZWG1lbnVGb250W2Zp
+				eGVkU2hhZG93WmhhbGZIZWlnaHRYZm9udFNpemVZbG9n
+				b0xhcmdlWnNob3dQYXJlbnRYc2hvd0xvZ29YdGl0bGVU
+				YWdUem9uZVhwb3NpdGlvblxtYXRjaFBhZGRpbmdVdGl0
+				bGVac2hvd1Nsb2dhbldkaXZpZGVyVHNob3dXcGFkZGlu
+				Z1pzaGFkb3dCbHVyWmhvdmVyQ29sb3JXaXNIb3Zlclli
+				YXNlQ29sb3JfEA9tb2JpbGVCYWNrTGFiZWxbbW9iaWxl
+				TGFiZWxZdGl0bGVBcmVhWXpvbmVBbGlnbl1zaGFkb3dP
+				cGFjaXR5WnN0aWNreUxvZ29ZdGl0bGVGb250WXNob3dU
+				aXRsZVZoZWlnaHRbYWN0aXZlQ29sb3Jbc3R5bGVBY3Rp
+				dmVeaGlkZUxvZ29Nb2JpbGVac3RpY2t5SGlkZV8QEGJy
+				ZWFrcG9pbnRDdXN0b21abG9nb01lZGl1bVl0ZXh0Q29s
+				b3JdZnVsbFdpZHRoTWVudVdjb250YWluXGN1c3RvbVNp
+				emluZ1picmVha3BvaW50VnNsb2dhbl8QEGhpZGVTbG9n
+				YW5Nb2JpbGVfEA9jb2xsYXBzZUhlYWRpbmdbem9uZURp
+				dmlkZXJbZml4ZWRPZmZzZXRfEBBzdWJtZW51SW5kaWNh
+				dG9yWWxvZ29TbWFsbF8QD2hpZGVUaXRsZU1vYmlsZV8Q
 				EGZvbnQtZmFtaWx5LXRleHRVc29saWTTALUAdwAsDYUN
 				jAC4pg2GDYcNiA2JDYoNi4ECrYECroECr4ECsIECsYEC
 				sqYNjQ2OADsNkA2RDZKBArOBArSABYECtYECtoECt4AZ
 				VGFyZzFSaWRVcm91bmRUYXJnMlhvcGVyYXRvclR0eXBl
 				WWhlaWdodFswXVpoYWxmSGVpZ2h0EAJRL1RtYXRo0wCA
-				AIEALA2gAHUAg0owIDAgMCAwLjQAgA9VcmlnaHTXA58A
-				LAOgA6EDogOjA6QAUQOmAHMAcA2nAFEAUYAAgNQIgQK7
-				gACAANMAtQB3ACwNqw2uALiiA60DroDRgNKiArgCuIDT
-				gNOAGVRoaWRlWlNpdGUgVGl0bGXSAHcALA21AMSiDbYN
-				toECv4ECv4AqEA9ScnfSAHcALA28AMSmDb0NvgOOA44D
-				jgOOgQLCgQLDgM6AzoDOgM6AKtMAgACBACwNxQB1AINL
-				MCAwIDAgMC4xNQCAD9UFOQCAAIEFOgAsDcgNyQB1BT0A
-				g08QKDAuOTgwMzkyMTU2OSAwLjk4MDM5MjE1NjkgMC45
-				ODAzOTIxNTY5IDFPECcwLjk3NTI5NjI1ODkgMC45NzUy
-				OTYyNTg5IDAuOTc1Mjk2MjU4OQCBATmAD9IAdwAsDc0A
-				xKYNzg3PA44DjgOOA46BAsWBAsaAzoDOgM6AzoAq0wCA
-				AIEALA3WAHUAg08QLDAuOTgwMzkyMTU2OSAwLjk4MDM5
-				MjE1NjkgMC45ODAzOTIxNTY5IDAuOTUAgA/TAIAAgQAs
-				DdkAdQCDTxAnMC40NTA5ODA0MjQ5IDAuNDUwOTgwNDI0
-				OSAwLjQ1MDk4MDQyNDkAgA9UQmFja1RNZW51WnNpdGUt
-				c2V0dXBUbGVmdFNhbGwQKF5mb250LWZhbWlseS1oMdIA
-				dwAsDeMAxKQBOwE7DeYN5oAwgDCBAs+BAs+AKiJBoAAA
-				0gB3ACwN6wDEpg3sAtkDjgOOA44DjoEC0YDngM6AzoDO
-				gM6AKtMAgACBACwN9AB1AINPEBIxIDEgMSAwLjE1MDAw
-				MDAwNgCADxECWNcDnwAsA6ADoQOiA6MDpABRA6YAcwBw
-				DfsAUQBRgACA1AiBAtSAAIAA0wC1AHcALA3/DgIAuKID
-				rQOugNGA0qICuAK4gNOA04AZ0wCAAIEALA4HAHUAg08Q
-				JzAuMzQ1MDk4MDM5MiAwLjM0NTA5ODAzOTIgMC4zNDkw
-				MTk2MDc4AIAPWDYyLjU2M2VtVlNsb2dhbtIAdwAsDgwA
-				xKIODQ4OgQLZgQLagCojP+oAAAAAAAAjP/EAAAAAAADX
+				AIEALA2gAHUAg0owIDAgMCAwLjQAgA/SAHcALA2jAMSi
+				DaQNpYECuoECu4AqIz/qAAAAAAAAIz/xAAAAAAAAVXJp
+				Z2h01wOfACwDoAOhA6IDowOkAFEDpgBzAHANrgBRAFGA
+				AIDUCIECvoAAgADTALUAdwAsDbINtQC4ogOtA66A0YDS
+				ogK4AriA04DTgBlUaGlkZVpTaXRlIFRpdGxl0gB3ACwN
+				vADEog29Db2BAsKBAsKAKhAPUnJ30gB3ACwNwwDEpg3E
+				DcUDjgOOA44DjoECxYECxoDOgM6AzoDOgCrTAIAAgQAs
+				DcwAdQCDSzAgMCAwIDAuMTUAgA/VBTkAgACBBToALA3P
+				DdAAdQU9AINPECgwLjk4MDM5MjE1NjkgMC45ODAzOTIx
+				NTY5IDAuOTgwMzkyMTU2OSAxTxAnMC45NzUyOTYyNTg5
+				IDAuOTc1Mjk2MjU4OSAwLjk3NTI5NjI1ODkAgQE5gA/S
+				AHcALA3UAMSmDdUN1gOOA44DjgOOgQLIgQLJgM6AzoDO
+				gM6AKtMAgACBACwN3QB1AINPECwwLjk4MDM5MjE1Njkg
+				MC45ODAzOTIxNTY5IDAuOTgwMzkyMTU2OSAwLjk1AIAP
+				0wCAAIEALA3gAHUAg08QJzAuNDUwOTgwNDI0OSAwLjQ1
+				MDk4MDQyNDkgMC40NTA5ODA0MjQ5AIAPVEJhY2tUTWVu
+				dVpzaXRlLXNldHVwVGxlZnRTYWxsECheZm9udC1mYW1p
+				bHktaDHSAHcALA3qAMSkATsBOw3tDe2AMIAwgQLSgQLS
+				gCoiQaAAANIAdwAsDfIAxKYN8wLZA44DjgOOA46BAtSA
+				54DOgM6AzoDOgCrTAIAAgQAsDfsAdQCDTxASMSAxIDEg
+				MC4xNTAwMDAwMDYAgA8RAljXA58ALAOgA6EDogOjA6QA
+				UQOmAHMAcA4CAFEAUYAAgNQIgQLXgACAANMAtQB3ACwO
+				Bg4JALiiA60DroDRgNKiArgCuIDTgNOAGdMAgACBACwO
+				DgB1AINPECcwLjM0NTA5ODAzOTIgMC4zNDUwOTgwMzky
+				IDAuMzQ5MDE5NjA3OACAD1g2Mi41NjNlbVZTbG9nYW7X
 				A58ALAOgA6EDogOjA6QAUQOmAHMAcA4WAFEAUYAAgNQI
 				gQLcgACAANMAtQB3ACwOGg4dALiiA60DroDRgNKiArgC
 				uIDTgNOAGdIAdwAsDiIAxKQOIw4kDiUOJoEC3oEC7oEC
@@ -2044,7 +2046,7 @@
 				gQOHgQTYgQODgQTZgQOGgQTagQOCgQOEgPuBAYKBAYGB
 				A32BBFmvEA8alxJ+ADkamgA5ADsanRqeArgXjxqhGqIN
 				NwK4ADuBBNuBA4yABoEE3IAGgAWBBN2BBN6A04EEZoEE
-				34EE4IECyoDTgAWAGVpsaW5lSGVpZ2h0WmN1c3RvbVNp
+				34EE4IECzYDTgAWAGVpsaW5lSGVpZ2h0WmN1c3RvbVNp
 				emVebGlua0hvdmVyQ29sb3LTAIAAgQAsGqsAdQCDTxAc
 				MCAwLjU0OTAxOTYzNDcgMC43Mjk0MTE3ODA4AIAPIz/5
 				mZmZmZma0gB3ACwarwDEoQA5gAaAKtMAgACBACwaswB1
@@ -8228,36 +8230,36 @@
 				uQAAprwAAKa/AACmwgAApsUAAKbIAACmywAAps4AAKbR
 				AACm1AAAptcAAKbaAACm3QAApuAAAKbjAACm5gAApukA
 				AKbsAACm7wAApvIAAKdhAACnZAAAp2cAAKdpAACnbAAA
-				p28AAKdxAACndAAAp3cAAKd5AACnewAAp30AAKd/AACn
-				ggAAp4QAAKeGAACniQAAp4sAAKeNAACnjwAAp5IAAKeV
-				AACnlwAAp5oAAKecAACnnwAAp6IAAKelAACnqAAAp6sA
-				AKeuAACnsQAAp7MAAKe2AACnuAAAp7sAAKe+AACnwAAA
-				p8IAAKfEAACnxwAAp8oAAKfNAACnzwAAp9EAAKfTAACn
-				1gAAp9kAAKfbAACn3QAAp98AAKfhAACn5AAAp+cAAKfp
-				AACn6wAAp/QAAKgAAACoCwAAqBcAAKghAACoLAAAqDUA
-				AKg+AACoQwAAqEwAAKhZAACoXwAAqGoAAKhyAACodwAA
-				qH8AAKiKAAColQAAqJ0AAKinAACouQAAqMUAAKjPAACo
-				2QAAqOcAAKjyAACo/AAAqQYAAKkNAACpGQAAqSUAAKk0
-				AACpPwAAqVIAAKldAACpZwAAqXUAAKl9AACpigAAqZUA
-				AKmcAACprwAAqcEAAKnNAACp4AAAqekAAKnzAACqBQAA
+				p28AAKdyAACndQAAp3gAAKd6AACnfAAAp34AAKeAAACn
+				gwAAp4UAAKeHAACnigAAp4wAAKeOAACnkAAAp5MAAKeW
+				AACnmAAAp5sAAKedAACnoAAAp6MAAKemAACnqQAAp6wA
+				AKevAACnsgAAp7QAAKe3AACnuQAAp7wAAKe/AACnwQAA
+				p8MAAKfFAACnyAAAp8sAAKfOAACn0AAAp9IAAKfUAACn
+				1wAAp9oAAKfcAACn3gAAp+AAAKfiAACn5AAAp+cAAKfp
+				AACn6wAAp/QAAKgAAACoCwAAqBQAAKgeAACoKQAAqDIA
+				AKg7AACoQAAAqEkAAKhWAACoXAAAqGcAAKhvAACodAAA
+				qHwAAKiHAACokgAAqJoAAKikAACotgAAqMIAAKjMAACo
+				1gAAqOQAAKjvAACo+QAAqQMAAKkKAACpFgAAqSIAAKkx
+				AACpPAAAqU8AAKlaAACpZAAAqXIAAKl6AACphwAAqZIA
+				AKmZAACprAAAqb4AAKnKAACp1gAAqekAAKnzAACqBQAA
 				qhgAAKoeAACqKwAAqjgAAKo7AACqPgAAqkEAAKpEAACq
 				RwAAqkoAAKpXAACqWgAAql0AAKpfAACqYgAAqmUAAKpo
 				AACqagAAqm8AAKpyAACqeAAAqn0AAKqGAACqiwAAqpUA
-				AKqgAACqogAAqqQAAKqpAACqtgAAqsEAAKrDAACqyQAA
-				quYAAKroAACq6gAAqusAAKruAACq8AAAqvIAAKr/AACr
-				BAAAqwYAAKsIAACrDQAAqw8AAKsRAACrEwAAqxgAAKsj
-				AACrLAAAqzEAAKs0AACrNwAAqzkAAKs7AACrPgAAq0cA
-				AKtUAACrVwAAq1oAAKtcAACrXgAAq2AAAKtiAACrZAAA
-				q3EAAKt9AACrfwAAq5QAAKu/AACr6QAAq+wAAKvuAACr
-				9wAArAQAAKwHAACsCgAArAwAAKwOAACsEAAArBIAAKwU
-				AACsIQAArFAAAKxSAACsXwAArIkAAKyLAACskAAArJUA
-				AKygAACspQAArKkAAKyrAACsugAArMMAAKzMAACszgAA
-				rNAAAKzTAACs1gAArNgAAKzdAACs5gAArPMAAKz2AACs
-				+AAArPoAAKz8AACs/gAArQAAAK0CAACtDwAArSQAAK0m
-				AACtKQAArUYAAK1IAACtSgAArUsAAK1OAACtUAAArVIA
-				AK1fAACtZAAArWYAAK1oAACtbQAArW8AAK1xAACtcwAA
-				rYAAAK2qAACtrAAArbUAAK28AACtxQAArcoAAK3NAACt
-				0AAArdIAAK3bAACt5AAArgEAAK4DAACuBQAArgYAAK4J
+				AKqgAACqogAAqqQAAKqpAACqtgAAqsEAAKrDAACqzAAA
+				qtEAAKrUAACq1wAAqtkAAKriAACq6wAAqvEAAKsOAACr
+				EAAAqxIAAKsTAACrFgAAqxgAAKsaAACrJwAAqywAAKsu
+				AACrMAAAqzUAAKs3AACrOQAAqzsAAKtAAACrSwAAq1QA
+				AKtZAACrXAAAq18AAKthAACrYwAAq2YAAKtvAACrfAAA
+				q38AAKuCAACrhAAAq4YAAKuIAACrigAAq4wAAKuZAACr
+				pQAAq6cAAKu8AACr5wAArBEAAKwUAACsFgAArB8AAKws
+				AACsLwAArDIAAKw0AACsNgAArDgAAKw6AACsPAAArEkA
+				AKx4AACsegAArIcAAKyxAACsswAArLgAAKy9AACsyAAA
+				rM0AAKzRAACs0wAArOIAAKzrAACs9AAArPYAAKz4AACs
+				+wAArP4AAK0AAACtBQAArQ4AAK0bAACtHgAArSAAAK0i
+				AACtJAAArSYAAK0oAACtKgAArTcAAK1MAACtTgAArVEA
+				AK1uAACtcAAArXIAAK1zAACtdgAArXgAAK16AACthwAA
+				rYwAAK2OAACtkAAArZUAAK2XAACtmQAArZsAAK2oAACt
+				0gAArdQAAK3dAACt5AAArgEAAK4DAACuBQAArgYAAK4J
 				AACuCwAArg0AAK4aAACuHwAAriEAAK4jAACuKAAArioA
 				AK4sAACuLgAArjcAAK5AAACuQwAArkYAAK5JAACuTAAA
 				rk4AAK8tAACvLgAArzAAAK8zAACvNgAArzgAAK87AACv
