--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/Data/Contents.plist
@@ -13,9 +13,10 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
 					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
 					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
 					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
 					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
@@ -42,6 +43,7 @@
 					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
 					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>C3045290-9DD8-4285-B611-D18187DC7F54.png</string>
 					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
@@ -52,10 +54,10 @@
 					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
 					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
 					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
-					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
+					<string>DCBB782F-34F6-4B68-9D92-6FCEDA3FBE69.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #134136F6A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
@@ -99,9 +101,9 @@
 				1wvYC9kL2gvbC9wL3QveC98L4AvhC+IL4wvkC+UL5gvn
 				C+gL6QvqC+sL7AvtC+4L7wvwC/EL8gvzC/QL9Qv2C/cL
 				+Av5C/oL+wv8C/0L/gv/DAAMAQwCDAMMBAwFDAYMBwwX
-				DBgMGQwaDBsMHAwdDB4MHwwgDCEMIgwlDCYMLQw1DDYM
-				Nww8DD0MPgxHDEoMTwxYDFsMXgxfDGAMYQxiDGMMZAxl
-				DGwMbQx2DHkMegyBDIkMjAyNDI4MkwyUDJUMnAykDKsM
+				DBgMGQwaDBsMHAwdDB4MHwwgDCEMIgwlDCoMKwwsDC0M
+				NAw8DD0MPgxDDEQMRQxODFEMVgxfDGIMZQxmDGcMaAxp
+				DGoMawxsDHMMdAx9DIAMgQyIDJAMkwyUDJUMnAykDKsM
 				4wzmDOcM6AztDPAM9wz9DQANBw0ODRUNHA0gDSMNJA1c
 				DV8NYA1hDWYNaQ1wDXYNeQ2ADYcNjg2VDZkNnA2dDdUN
 				2A3ZDdoN3w3iDekN7w3yDfkOAA4HDg4OEg4VDhYORQ5I
@@ -1141,61 +1143,61 @@
 				gQJBgQJCgQJDgQJEgQJFgQJGgQJHgQJIgQJJgQJKgQJL
 				gQJMgQJNgQJOgQJPgQJQgQJRgQJSgQJTgQJUgQJVgQJW
 				gQJXgQJYgQJZgQJagQJbgQJcgQJdgQJerxA2C5kLmgA5
-				C5wLnQA5C58LoAA7ADsCxgBSC6UCmQA7C6gAOQA5ArUL
+				C5wLnQueC58LoAA7ADsCxgBSC6UCmQA7C6gAOQA5ArUL
 				rAutAT0LrwA7C7ELsguzC7QLtQu2C7cAOQu5ADsLuwu8
-				ADkAOQA5C8ALwQvCADsAOQA5C8YLxwA7ADkAWgA5C8wL
-				zQA7gQJfgQJggAaBAmGBAm2ABoECboECb4AFgAWA8YAL
-				gQJxgLaABYECcoAGgAaA0oECc4ECdYAugQJ2gAWBAnmB
-				AnyBAn2BAn6BAn+BAoCBAoGABoECgoAFgQKDgQKFgAaA
-				BoAGgQKHgQKIgQKKgAWABoAGgQKLgQKMgAWABoAJgAaB
-				Ao2BApCABYAXWG1lbnVGb250VXN0eWxlW2ZpeGVkU2hh
-				ZG93WmhhbGZIZWlnaHRbem9uZURpdmlkZXJVYWxpZ25Z
-				bG9nb0xhcmdlWnNob3dQYXJlbnRYc2hvd0xvZ29YdGl0
-				bGVUYWdYbmF2SW5kZXhUem9uZVhwb3NpdGlvblxtYXRj
-				aFBhZGRpbmdVdGl0bGVac2hvd1Nsb2dhbldkaXZpZGVy
-				VHNob3dXcGFkZGluZ1RtZW51WnNoYWRvd0JsdXJaaG92
-				ZXJDb2xvcldpc0hvdmVyWWJhc2VDb2xvcl8QD21vYmls
-				ZUJhY2tMYWJlbFttb2JpbGVMYWJlbFl0aXRsZUFyZWFZ
-				em9uZUFsaWduVXNjb3BlXXNoYWRvd09wYWNpdHlac3Rp
-				Y2t5TG9nb1l0aXRsZUZvbnRZc2hvd1RpdGxlVmhlaWdo
-				dFthY3RpdmVDb2xvcltzdHlsZUFjdGl2ZV5oaWRlTG9n
-				b01vYmlsZVpzdGlja3lIaWRlXxAQYnJlYWtwb2ludEN1
-				c3RvbVpsb2dvTWVkaXVtWXRleHRDb2xvcl1mdWxsV2lk
-				dGhNZW51V2NvbnRhaW5cY3VzdG9tU2l6aW5nWmJyZWFr
-				cG9pbnRWc2xvZ2FuXxAQaGlkZVNsb2dhbk1vYmlsZV8Q
-				D2NvbGxhcHNlSGVhZGluZ1tmaXhlZE9mZnNldF8QEHN1
-				Ym1lbnVJbmRpY2F0b3JYZm9udFNpemVZbG9nb1NtYWxs
+				ADkAOQA5C8ALwQvCADsAOQA5C8YLxwA7ADkAOQBaADkL
+				zQA7gQJfgQJggAaBAmGBAm2BAm6BAnGBAnKABYAFgPGA
+				C4ECdIC2gAWBAnWABoAGgNKBAnaBAniALoECeYAFgQJ8
+				gQJ/gQKAgQKBgQKCgQKDgQKEgAaBAoWABYEChoECiIAG
+				gAaABoECioECi4ECjYAFgAaABoECjoECj4AFgAaABoAJ
+				gAaBApCABYAXWG1lbnVGb250VXN0eWxlW2ZpeGVkU2hh
+				ZG93WmhhbGZIZWlnaHRYZm9udFNpemVVYWxpZ25ZbG9n
+				b0xhcmdlWnNob3dQYXJlbnRYc2hvd0xvZ29YdGl0bGVU
+				YWdYbmF2SW5kZXhUem9uZVhwb3NpdGlvblxtYXRjaFBh
+				ZGRpbmdVdGl0bGVac2hvd1Nsb2dhbldkaXZpZGVyVHNo
+				b3dXcGFkZGluZ1RtZW51WnNoYWRvd0JsdXJaaG92ZXJD
+				b2xvcldpc0hvdmVyWWJhc2VDb2xvcl8QD21vYmlsZUJh
+				Y2tMYWJlbFttb2JpbGVMYWJlbFl0aXRsZUFyZWFZem9u
+				ZUFsaWduVXNjb3BlXXNoYWRvd09wYWNpdHlac3RpY2t5
+				TG9nb1l0aXRsZUZvbnRZc2hvd1RpdGxlVmhlaWdodFth
+				Y3RpdmVDb2xvcltzdHlsZUFjdGl2ZV5oaWRlTG9nb01v
+				YmlsZVpzdGlja3lIaWRlXxAQYnJlYWtwb2ludEN1c3Rv
+				bVpsb2dvTWVkaXVtWXRleHRDb2xvcl1mdWxsV2lkdGhN
+				ZW51V2NvbnRhaW5cY3VzdG9tU2l6aW5nWmJyZWFrcG9p
+				bnRWc2xvZ2FuXxAQaGlkZVNsb2dhbk1vYmlsZV8QD2Nv
+				bGxhcHNlSGVhZGluZ1t6b25lRGl2aWRlcltmaXhlZE9m
+				ZnNldF8QEHN1Ym1lbnVJbmRpY2F0b3JZbG9nb1NtYWxs
 				XxAPaGlkZVRpdGxlTW9iaWxlXxAQZm9udC1mYW1pbHkt
 				dGV4dFVzb2xpZNMAsQB3ACwMCAwPALSmDAkMCgwLDAwM
 				DQwOgQJigQJjgQJkgQJlgQJmgQJnpgwQDBEAOwwTDBQM
 				FYECaIECaYAFgQJqgQJrgQJsgBdUYXJnMVJpZFVyb3Vu
 				ZFRhcmcyWG9wZXJhdG9yVHR5cGVZaGVpZ2h0WzBdWmhh
 				bGZIZWlnaHQQAlEvVG1hdGjTAIAAgQAsDCMAdQCDSjAg
-				MCAwIDAuNACAD1VyaWdodNcDnAAsA50DngOfA6ADoQBR
-				A6MAcwBwDCoAUQBRgACA0wiBAnCAAIAA0wCxAHcALAwu
-				DDEAtKIDqgOrgNCA0aICtQK1gNKA0oAXVGhpZGVaU2l0
-				ZSBUaXRsZdIAdwAsDDgAwKIMOQw5gQJ0gQJ0gCkQD1Jy
-				d9IAdwAsDD8AwKYMQAxBA4sDiwOLA4uBAneBAniAzYDN
-				gM2AzYAp0wCAAIEALAxIAHUAg0swIDAgMCAwLjE1AIAP
-				1QU2AIAAgQU3ACwMSwxMAHUFOgCDTxAoMC45ODAzOTIx
-				NTY5IDAuOTgwMzkyMTU2OSAwLjk4MDM5MjE1NjkgMU8Q
-				JzAuOTc1Mjk2MjU4OSAwLjk3NTI5NjI1ODkgMC45NzUy
-				OTYyNTg5AIEBOIAP0gB3ACwMUADApgxRDFIDiwOLA4sD
-				i4ECeoECe4DNgM2AzYDNgCnTAIAAgQAsDFkAdQCDTxAs
-				MC45ODAzOTIxNTY5IDAuOTgwMzkyMTU2OSAwLjk4MDM5
-				MjE1NjkgMC45NQCAD9MAgACBACwMXAB1AINPECcwLjQ1
-				MDk4MDQyNDkgMC40NTA5ODA0MjQ5IDAuNDUwOTgwNDI0
-				OQCAD1RCYWNrVE1lbnVac2l0ZS1zZXR1cFRsZWZ0U2Fs
-				bBAoXmZvbnQtZmFtaWx5LWgx0gB3ACwMZgDApAE4ATgM
-				aQxpgC+AL4EChIEChIApIkGgAADSAHcALAxuAMCmDG8C
-				1gOLA4sDiwOLgQKGgOaAzYDNgM2AzYAp0wCAAIEALAx3
-				AHUAg08QEjEgMSAxIDAuMTUwMDAwMDA2AIAPEQJY1wOc
-				ACwDnQOeA58DoAOhAFEDowBzAHAMfgBRAFGAAIDTCIEC
-				iYAAgADTALEAdwAsDIIMhQC0ogOqA6uA0IDRogK1ArWA
-				0oDSgBfTAIAAgQAsDIoAdQCDTxAnMC4zNDUwOTgwMzky
-				IDAuMzQ1MDk4MDM5MiAwLjM0OTAxOTYwNzgAgA9YNjIu
-				NTYzZW1WU2xvZ2Fu0gB3ACwMjwDAogyQDJGBAo6BAo+A
-				KSM/6gAAAAAAACM/8QAAAAAAANcDnAAsA50DngOfA6AD
+				MCAwIDAuNACAD9IAdwAsDCYAwKIMJwwogQJvgQJwgCkj
+				P+oAAAAAAAAjP/EAAAAAAABVcmlnaHTXA5wALAOdA54D
+				nwOgA6EAUQOjAHMAcAwxAFEAUYAAgNMIgQJzgACAANMA
+				sQB3ACwMNQw4ALSiA6oDq4DQgNGiArUCtYDSgNKAF1Ro
+				aWRlWlNpdGUgVGl0bGXSAHcALAw/AMCiDEAMQIECd4EC
+				d4ApEA9ScnfSAHcALAxGAMCmDEcMSAOLA4sDiwOLgQJ6
+				gQJ7gM2AzYDNgM2AKdMAgACBACwMTwB1AINLMCAwIDAg
+				MC4xNQCAD9UFNgCAAIEFNwAsDFIMUwB1BToAg08QKDAu
+				OTgwMzkyMTU2OSAwLjk4MDM5MjE1NjkgMC45ODAzOTIx
+				NTY5IDFPECcwLjk3NTI5NjI1ODkgMC45NzUyOTYyNTg5
+				IDAuOTc1Mjk2MjU4OQCBATiAD9IAdwAsDFcAwKYMWAxZ
+				A4sDiwOLA4uBAn2BAn6AzYDNgM2AzYAp0wCAAIEALAxg
+				AHUAg08QLDAuOTgwMzkyMTU2OSAwLjk4MDM5MjE1Njkg
+				MC45ODAzOTIxNTY5IDAuOTUAgA/TAIAAgQAsDGMAdQCD
+				TxAnMC40NTA5ODA0MjQ5IDAuNDUwOTgwNDI0OSAwLjQ1
+				MDk4MDQyNDkAgA9UQmFja1RNZW51WnNpdGUtc2V0dXBU
+				bGVmdFNhbGwQKF5mb250LWZhbWlseS1oMdIAdwAsDG0A
+				wKQBOAE4DHAMcIAvgC+BAoeBAoeAKSJBoAAA0gB3ACwM
+				dQDApgx2AtYDiwOLA4sDi4ECiYDmgM2AzYDNgM2AKdMA
+				gACBACwMfgB1AINPEBIxIDEgMSAwLjE1MDAwMDAwNgCA
+				DxECWNcDnAAsA50DngOfA6ADoQBRA6MAcwBwDIUAUQBR
+				gACA0wiBAoyAAIAA0wCxAHcALAyJDIwAtKIDqgOrgNCA
+				0aICtQK1gNKA0oAX0wCAAIEALAyRAHUAg08QJzAuMzQ1
+				MDk4MDM5MiAwLjM0NTA5ODAzOTIgMC4zNDkwMTk2MDc4
+				AIAPWDYyLjU2M2VtVlNsb2dhbtcDnAAsA50DngOfA6AD
 				oQBRA6MAcwBwDJkAUQBRgACA0wiBApGAAIAA0wCxAHcA
 				LAydDKAAtKIDqgOrgNCA0aICtQK1gNKA0oAX0gB3ACwM
 				pQDApAymDKcMqAypgQKTgQKjgQKzgQLDgCnfEDcFgQAR
@@ -1841,7 +1843,7 @@
 				EPACzhDvC2gQ5xYNgGGBAiuBAzyBBJaBAzeBBJeBAzuB
 				BJiBAzaBAzmA+oEDOIECL4EDMYEEF68QDxk1EP4AORk4
 				ADkAOxk7GTwCtRYtGT8ZQAu1ArUAO4EEmYEDQoAGgQSa
-				gAaABYEEm4EEnIDSgQQkgQSdgQSegQJ/gNKABYAXWmxp
+				gAaABYEEm4EEnIDSgQQkgQSdgQSegQKCgNKABYAXWmxp
 				bmVIZWlnaHRaY3VzdG9tU2l6ZV5saW5rSG92ZXJDb2xv
 				ctMAgACBACwZSQB1AINPEBwwIDAuNTQ5MDE5NjM0NyAw
 				LjcyOTQxMTc4MDgAgA8jP/mZmZmZmZrSAHcALBlNAMCh
@@ -4623,7 +4625,7 @@
 				N4EDOIEDPIEDOoECV4B/gQIvgQM7gQM5gQwfgQM+gQM/
 				gQNBrxAWSzECtQK1SzQAOQA5ArUAOQA5ADlLOwA5Sz0A
 				ORMCC7VLQREIS0NLRAwTADmBDCCA0oDSgQwhgAaABoDS
-				gAaABoAGgQwkgAaBDCWABoEDioECf4EMJoEDSYEMJ4EM
+				gAaABoAGgQwkgAaBDCWABoEDioECgoEMJoEDSYEMJ4EM
 				KIECaoAGgBdbaGVhZGVyU3R5bGVcaGVhZGVyV2VpZ2h0
 				0wCAAIEALEtLAHUAg08QJzAuMTMzMzMzMzQwMyAwLjEz
 				MzMzMzM0MDMgMC4xMzMzMzMzNDAzAIAP1wOcACwDnQOe
@@ -4712,7 +4714,7 @@
 				gQM5gQxegQM+gQM/gQNBrxAWTPdM+AK1TPoAOQA5ArUA
 				OQA5ADlNAQA5TQMAORMCC7VNBxEIS0NNCgwTADmBDF+B
 				DGCA0oEMYYAGgAaA0oAGgAaABoEMZIAGgQxlgAaBA4qB
-				An+BDGaBA0mBDCeBDGeBAmqABoAXW2hlYWRlclN0eWxl
+				AoKBDGaBA0mBDCeBDGeBAmqABoAXW2hlYWRlclN0eWxl
 				XGhlYWRlcldlaWdodNMAgACBACxNEQB1AINPECcwLjEz
 				MzMzMzM0MDMgMC4xMzMzMzMzNDAzIDAuMTMzMzMzMzQw
 				MwCAD11mbi10ZXh0LXN3MWMx1wOcACwDnQOeA58DoAOh
@@ -4821,7 +4823,7 @@
 				AzyBAzeBDKuBDKyBAzuBAzaBDK2BAzmA+oEDOIEMroEC
 				L4EDMYEEF68QEE8iArUAOQA5TyYAOU8oArVPKhYtTywA
 				Uk8uC7UCtQA5gQyvgNKABoAGgQywgAaBDLGA0oEMsoEE
-				JIEMs4ALgQy0gQJ/gNKABoAXWmxpbmVIZWlnaHRaY3Vz
+				JIEMs4ALgQy0gQKCgNKABoAXWmxpbmVIZWlnaHRaY3Vz
 				dG9tU2l6ZV5saW5rSG92ZXJDb2xvcl8QFnN0YWNrc1Jl
 				c3BvbnNpdmVIaWRkZW7TAIAAgQAsTzgAdQCDTxAcMCAw
 				LjU0OTAxOTYzNDcgMC43Mjk0MTE3ODA4AIAPIz/5mZmZ
@@ -4947,7 +4949,7 @@
 				gQM5gQTfgQzngQM7gQThgQTigQTjgQNBgQTkgQPJrxAa
 				ADlQkgK1UJRQlQMKArUAORrrUJpQmwvAADkDBQA7EPoa
 				9FCiUKNQpAA5UKYAOQA5UKkCtYAGgQzogNKBDOqBDOyB
-				ATCA0oAGgQTrgQzvgQzwgQKHgAaBAS6ABYEDQIEE8YEM
+				ATCA0oAGgQTrgQzvgQzwgQKKgAaBAS6ABYEDQIEE8YEM
 				8oEM9IEM9YAGgQz2gAaABoEM+IDSgBdabWVkaXVtTGlu
 				a1tzaXplUGVyY2VudF1zbWFsbE1heFdpZHRoXm1lZGl1
 				bU1heFdpZHRoWmxvYWRIZWlnaHRabG9hZE1vYmlsZV1s
@@ -6787,13 +6789,13 @@
 				c6QAe6QAWgBaAFoAWoAJgAmACYAJgA3SAHcALHOrAHuk
 				AFoAWgBaAFqACYAJgAmACYAN0wCxAHcALHOyc8wAtK8Q
 				GXOzEOgCVBrOA6pzuHO5c7pzu3O8c71zvnO/c8BzwXPC
-				c8MLlXPFc8Zzx3PIc8lzynPLgRIsgQMygHGBBNmA0IES
+				c8MLZ3PFc8Zzx3PIc8lzynPLgRIsgQMygHGBBNmA0IES
 				LYESLoESL4ESMIESMYESMoESM4ESNIESNYESNoESN4ES
-				OIECXIESOYESOoESO4ESPIESPYESPoESP68QGXPNc85z
+				OIECLoESOYESOoESO4ESPIESPYESPoESP68QGXPNc85z
 				zwA5ADtz0gK1ArVz1XPWc9cAOXPZc9oAOQA5c91z3gA5
 				c+AQ+gvAUJoCt3PlgRJAgRJCgRJEgAaABYESRYDSgNKB
 				EkaBEkeBEkmABoESSoESS4AGgAaBEkyBEk2ABoESToED
-				QIECh4EM74DZgRJPgBdfEBVzaGFyZV9tZWRpYV93YXJl
+				QIECioEM74DZgRJPgBdfEBVzaGFyZV9tZWRpYV93YXJl
 				aG91c2VZZ2FfYWN0aW9uWGdhX2xhYmVsW3NoYXJlX21l
 				ZGlhW2dhX2NhdGVnb3J5WmN1c3RvbV91cmxeZm9udENv
 				bG9ySG92ZXJXaW5oZXJpdFtjdXN0b21faWNvbllsYWJl
@@ -6859,13 +6861,13 @@
 				CYAJgAmADdIAdwAsdRIAe6QAWgBaAFoAWoAJgAmACYAJ
 				gA3SAHcALHUZAHukAFoAWgBaAFqACYAJgAmACYAN0wCx
 				AHcALHUgdToAtK8QGXUhEOgCVBrOA6pzuHO5dSh1KXUq
-				dStzvnUtc8B1L3PCc8MLlXPFdTRzx3U2dTd1OHPLgRJx
+				dStzvnUtc8B1L3PCc8MLZ3PFdTRzx3U2dTd1OHPLgRJx
 				gQMygHGBBNmA0IESLYESLoEScoESc4ESdIESdYESM4ES
-				doESNYESd4ESN4ESOIECXIESOYESeIESO4ESeYESeoES
+				doESNYESd4ESN4ESOIECLoESOYESeIESO4ESeYESeoES
 				e4ESP68QGXU7dTx1PQA5ADtz0gK1ArVz1XVEc9cAOXPZ
 				c9oAOQA5c91z3gA5dU4Q+gvAUJoQ6HVTgRJ8gRJ+gRKB
 				gAaABYESRYDSgNKBEkaBEoKBEkmABoESSoESS4AGgAaB
-				EkyBEk2ABoEShIEDQIECh4EM74EDMoEShYAXXxAVc2hh
+				EkyBEk2ABoEShIEDQIECioEM74EDMoEShYAXXxAVc2hh
 				cmVfbWVkaWFfd2FyZWhvdXNlW3NoYXJlX21lZGlhW2dh
 				X2NhdGVnb3J5WmN1c3RvbV91cmxeZm9udENvbG9ySG92
 				ZXJbY3VzdG9tX2ljb25dZGVmYXVsdENvbG9yc15jdXN0
@@ -6928,13 +6930,13 @@
 				LHZoAHukAFoAWgBaAFqACYAJgAmACYAN0gB3ACx2bwB7
 				pABaAFoAWgBagAmACYAJgAmADdIAdwAsdnYAe6QAWgBa
 				AFoAWoAJgAmACYAJgA3TALEAdwAsdn12lwC0rxAZdn4Q
-				6AJUGs4DqnO4c7l2hXaGdod2iHO+dopzwHaMc8JzwwuV
+				6AJUGs4DqnO4c7l2hXaGdod2iHO+dopzwHaMc8Jzwwtn
 				c8V2kXPHdpN2lHaVc8uBEqeBAzKAcYEE2YDQgRItgRIu
-				gRKogRKpgRKqgRKrgRIzgRKsgRI1gRKtgRI3gRI4gQJc
+				gRKogRKpgRKqgRKrgRIzgRKsgRI1gRKtgRI3gRI4gQIu
 				gRI5gRKugRI7gRKvgRKwgRKxgRI/rxAZdph2mXaaADkA
 				O3PSArUCtXPVdqFz1wA5c9lz2gA5ADlz3XapADl2qxD6
 				C8BQmhDodrCBErKBErSBEreABoAFgRJFgNKA0oESRoES
-				uIESSYAGgRJKgRJLgAaABoESTIESuoAGgRK7gQNAgQKH
+				uIESSYAGgRJKgRJLgAaABoESTIESuoAGgRK7gQNAgQKK
 				gQzvgQMygRK8gBdfEBVzaGFyZV9tZWRpYV93YXJlaG91
 				c2Vbc2hhcmVfbWVkaWFbZ2FfY2F0ZWdvcnlaY3VzdG9t
 				X3VybF5mb250Q29sb3JIb3ZlcltjdXN0b21faWNvbl1k
@@ -6997,13 +6999,13 @@
 				dwAsd8wAe6QAWgBaAFoAWoAJgAmACYAJgA3SAHcALHfT
 				AHukAFoAWgBaAFqACYAJgAmACYAN0wCxAHcALHfad/QA
 				tK8QGXOzEOgCVBrOA6pzuHO5c7pzu3O8c71zvnO/c8Bz
-				wXPCc8MLlXPFc8Zzx3PIc8lzynPLgRIsgQMygHGBBNmA
+				wXPCc8MLZ3PFc8Zzx3PIc8lzynPLgRIsgQMygHGBBNmA
 				0IESLYESLoESL4ESMIESMYESMoESM4ESNIESNYESNoES
-				N4ESOIECXIESOYESOoESO4ESPIESPYESPoESP68QGXf1
+				N4ESOIECLoESOYESOoESO4ESPIESPYESPoESP68QGXf1
 				d/Z39wA5ADtz0gK1ArVz1Xf+c9cAOXPZc9oAOQA5c912
 				qQA5c+AQ+gvAUJoQ6HgNgRLdgRLfgRLjgAaABYESRYDS
 				gNKBEkaBEuSBEkmABoESSoESS4AGgAaBEkyBErqABoES
-				ToEDQIECh4EM74EDMoES5oAX1wOcACwDnQOeA58DoAOh
+				ToEDQIECioEM74EDMoES5oAX1wOcACwDnQOeA58DoAOh
 				AFEDowBzAHB4EwBRAFGAAIDTCIES3oAAgADTALEAdwAs
 				eBd4GgC0ogOqA6uA0IDRogK1ArWA0oDSgBfXA5wALAOd
 				A54DnwOgA6EAUQOjAHMAb3gieCMAUYAAgNMJgRLhgRLg
@@ -7355,7 +7357,7 @@
 				9IECL4EDOYEE34ET9YEDO4EE4YEE4oEE44EDQYEE5IED
 				ya8QGgA5fu4CtX7wfvEDBQK1ADka61CafvcLwAA5fvoA
 				OxD6GvR+/lCjfwAAOX8CADsAO38FArWABoET9oDSgRP4
-				gRP6gQEugNKABoEE64EM74ET/YECh4AGgRP/gAWBA0CB
+				gRP6gQEugNKABoEE64EM74ET/YECioAGgRP/gAWBA0CB
 				BPGBFACBDPSBFAKABoEUA4AFgAWBFAWA0oAXWm1lZGl1
 				bUxpbmtbc2l6ZVBlcmNlbnRdc21hbGxNYXhXaWR0aF5t
 				ZWRpdW1NYXhXaWR0aFpsb2FkSGVpZ2h0WmxvYWRNb2Jp
@@ -7620,7 +7622,7 @@
 				toEDN4EUt4EUuIECL4EDOYEE34EUuYEDO4EE4YEE4oEE
 				44EDQYEE5IEDya8QGgA5hGcCtX7whGoDCgK1ADka61Ca
 				hHALwAA5AwUAOxD6GvSEd1CjhHkAOX8CADkAO4R+ArWA
-				BoEUuoDSgRP4gRS8gQEwgNKABoEE64EM74EUv4ECh4AG
+				BoEUuoDSgRP4gRS8gQEwgNKABoEE64EM74EUv4ECioAG
 				gQEugAWBA0CBBPGBFMGBDPSBFMOABoEUA4AGgAWBFMSA
 				0oAXWm1lZGl1bUxpbmtbc2l6ZVBlcmNlbnRdc21hbGxN
 				YXhXaWR0aF5tZWRpdW1NYXhXaWR0aFpsb2FkSGVpZ2h0
@@ -7818,7 +7820,7 @@
 				gQTigQTjgQNBgQTkgQPJrxAaADmIeAK1fvCIewMKArUA
 				ORrrUJqIgQvAADkDBQA7EPoa9IiIUKOIigA5fwIAOQA7
 				iI8CtYAGgRVKgNKBE/iBFUyBATCA0oAGgQTrgQzvgRVP
-				gQKHgAaBAS6ABYEDQIEE8YEVUYEM9IEVU4AGgRQDgAaA
+				gQKKgAaBAS6ABYEDQIEE8YEVUYEM9IEVU4AGgRQDgAaA
 				BYEVVIDSgBdabWVkaXVtTGlua1tzaXplUGVyY2VudF1z
 				bWFsbE1heFdpZHRoXm1lZGl1bU1heFdpZHRoWmxvYWRI
 				ZWlnaHRabG9hZE1vYmlsZV1sYXJnZU1heFdpZHRo1wOc
@@ -7890,7 +7892,7 @@
 				BOGBBOKBBOOBA0GBBOSBA8mvEBoAOYnmArV+8InpAwoC
 				tQA5GutQmonvC8AAOQMFADsQ+hr0ifZQo4n4ADl/AgA5
 				ADuJ/QK1gAaBFX6A0oET+IEVgIEBMIDSgAaBBOuBDO+B
-				FYOBAoeABoEBLoAFgQNAgQTxgRWFgQz0gRWHgAaBFAOA
+				FYOBAoqABoEBLoAFgQNAgQTxgRWFgQz0gRWHgAaBFAOA
 				BoAFgRWIgNKAF1ptZWRpdW1MaW5rW3NpemVQZXJjZW50
 				XXNtYWxsTWF4V2lkdGhebWVkaXVtTWF4V2lkdGhabG9h
 				ZEhlaWdodFpsb2FkTW9iaWxlXWxhcmdlTWF4V2lkdGjX
@@ -7962,7 +7964,7 @@
 				FbGBAzuBBOGBBOKBBOOBA0GBBOSBA8mvEBoAOYtUArV+
 				8ItXAwoCtQA5GutQmotdC8AAOQMFADsQ+hr0i2RQo4tm
 				ADl/AgA5ADuLawK1gAaBFbKA0oET+IEVtIEBMIDSgAaB
-				BOuBDO+BFbeBAoeABoEBLoAFgQNAgQTxgRW5gQz0gRW7
+				BOuBDO+BFbeBAoqABoEBLoAFgQNAgQTxgRW5gQz0gRW7
 				gAaBFAOABoAFgRW8gNKAF1ptZWRpdW1MaW5rW3NpemVQ
 				ZXJjZW50XXNtYWxsTWF4V2lkdGhebWVkaXVtTWF4V2lk
 				dGhabG9hZEhlaWdodFpsb2FkTW9iaWxlXWxhcmdlTWF4
@@ -8825,36 +8827,36 @@
 				AItcAACLXwAAi2IAAItlAACLaAAAi2sAAItuAACLcQAA
 				i3QAAIt3AACLegAAi30AAIuAAACLgwAAi4YAAIuJAACL
 				jAAAi48AAIuSAACMAQAAjAQAAIwHAACMCQAAjAwAAIwP
-				AACMEQAAjBQAAIwXAACMGQAAjBsAAIwdAACMHwAAjCIA
-				AIwkAACMJgAAjCkAAIwrAACMLQAAjC8AAIwyAACMNQAA
-				jDcAAIw6AACMPAAAjD8AAIxCAACMRQAAjEgAAIxLAACM
-				TgAAjFEAAIxTAACMVgAAjFgAAIxbAACMXgAAjGAAAIxi
-				AACMZAAAjGcAAIxqAACMbQAAjG8AAIxxAACMcwAAjHYA
-				AIx5AACMewAAjH0AAIx/AACMgQAAjIQAAIyHAACMiQAA
-				jIsAAIyUAACMmgAAjKYAAIyxAACMvQAAjMMAAIzNAACM
-				2AAAjOEAAIzqAACM8wAAjPgAAI0BAACNDgAAjRQAAI0f
-				AACNJwAAjSwAAI00AACNOQAAjUQAAI1PAACNVwAAjWEA
-				AI1zAACNfwAAjYkAAI2TAACNmQAAjacAAI2yAACNvAAA
-				jcYAAI3NAACN2QAAjeUAAI30AACN/wAAjhIAAI4dAACO
-				JwAAjjUAAI49AACOSgAAjlUAAI5cAACObwAAjoEAAI6N
-				AACOoAAAjqkAAI6zAACOxQAAjtgAAI7eAACO6wAAjvgA
+				AACMEgAAjBUAAIwYAACMGgAAjBwAAIweAACMIAAAjCMA
+				AIwlAACMJwAAjCoAAIwsAACMLgAAjDAAAIwzAACMNgAA
+				jDgAAIw7AACMPQAAjEAAAIxDAACMRgAAjEkAAIxMAACM
+				TwAAjFIAAIxUAACMVwAAjFkAAIxcAACMXwAAjGEAAIxj
+				AACMZQAAjGgAAIxrAACMbgAAjHAAAIxyAACMdAAAjHcA
+				AIx6AACMfAAAjH4AAIyAAACMggAAjIQAAIyHAACMiQAA
+				jIsAAIyUAACMmgAAjKYAAIyxAACMugAAjMAAAIzKAACM
+				1QAAjN4AAIznAACM8AAAjPUAAIz+AACNCwAAjREAAI0c
+				AACNJAAAjSkAAI0xAACNNgAAjUEAAI1MAACNVAAAjV4A
+				AI1wAACNfAAAjYYAAI2QAACNlgAAjaQAAI2vAACNuQAA
+				jcMAAI3KAACN1gAAjeIAAI3xAACN/AAAjg8AAI4aAACO
+				JAAAjjIAAI46AACORwAAjlIAAI5ZAACObAAAjn4AAI6K
+				AACOlgAAjqkAAI6zAACOxQAAjtgAAI7eAACO6wAAjvgA
 				AI77AACO/gAAjwEAAI8EAACPBwAAjwoAAI8XAACPGgAA
 				jx0AAI8fAACPIgAAjyUAAI8oAACPKgAAjy8AAI8yAACP
 				OAAAjz0AAI9GAACPSwAAj1UAAI9gAACPYgAAj2QAAI9p
-				AACPdgAAj4EAAI+DAACPiQAAj6YAAI+oAACPqgAAj6sA
-				AI+uAACPsAAAj7IAAI+/AACPxAAAj8YAAI/IAACPzQAA
-				j88AAI/RAACP0wAAj9gAAI/jAACP7AAAj/EAAI/0AACP
-				9wAAj/kAAI/7AACP/gAAkAcAAJAUAACQFwAAkBoAAJAc
-				AACQHgAAkCAAAJAiAACQJAAAkDEAAJA9AACQPwAAkFQA
-				AJB/AACQqQAAkKwAAJCuAACQtwAAkMQAAJDHAACQygAA
-				kMwAAJDOAACQ0AAAkNIAAJDUAACQ4QAAkRAAAJESAACR
-				HwAAkUkAAJFLAACRUAAAkVUAAJFgAACRZQAAkWkAAJFr
-				AACRegAAkYMAAJGMAACRjgAAkZAAAJGTAACRlgAAkZgA
-				AJGdAACRpgAAkbMAAJG2AACRuAAAkboAAJG8AACRvgAA
-				kcAAAJHCAACRzwAAkeQAAJHmAACR6QAAkgYAAJIIAACS
-				CgAAkgsAAJIOAACSEAAAkhIAAJIfAACSJAAAkiYAAJIo
-				AACSLQAAki8AAJIxAACSMwAAkkAAAJJqAACSbAAAknUA
-				AJJ8AACShQAAkooAAJKNAACSkAAAkpIAAJKbAACSpAAA
+				AACPdgAAj4EAAI+DAACPjAAAj5EAAI+UAACPlwAAj5kA
+				AI+iAACPqwAAj7EAAI/OAACP0AAAj9IAAI/TAACP1gAA
+				j9gAAI/aAACP5wAAj+wAAI/uAACP8AAAj/UAAI/3AACP
+				+QAAj/sAAJAAAACQCwAAkBQAAJAZAACQHAAAkB8AAJAh
+				AACQIwAAkCYAAJAvAACQPAAAkD8AAJBCAACQRAAAkEYA
+				AJBIAACQSgAAkEwAAJBZAACQZQAAkGcAAJB8AACQpwAA
+				kNEAAJDUAACQ1gAAkN8AAJDsAACQ7wAAkPIAAJD0AACQ
+				9gAAkPgAAJD6AACQ/AAAkQkAAJE4AACROgAAkUcAAJFx
+				AACRcwAAkXgAAJF9AACRiAAAkY0AAJGRAACRkwAAkaIA
+				AJGrAACRtAAAkbYAAJG4AACRuwAAkb4AAJHAAACRxQAA
+				kc4AAJHbAACR3gAAkeAAAJHiAACR5AAAkeYAAJHoAACR
+				6gAAkfcAAJIMAACSDgAAkhEAAJIuAACSMAAAkjIAAJIz
+				AACSNgAAkjgAAJI6AACSRwAAkkwAAJJOAACSUAAAklUA
+				AJJXAACSWQAAklsAAJJoAACSkgAAkpQAAJKdAACSpAAA
 				ksEAAJLDAACSxQAAksYAAJLJAACSywAAks0AAJLaAACS
 				3wAAkuEAAJLjAACS6AAAkuoAAJLsAACS7gAAkvcAAJMA
 				AACTAwAAkwYAAJMJAACTDAAAkw4AAJPtAACT7gAAk/AA
